--- a/ok/gmzy/gmzy012-1.md
+++ b/ok/gmzy/gmzy012-1.md
@@ -65,7 +65,7 @@
 
 在学习时间方面，如果学员每天能拿出2-3个小时学习的话，大约2个月可以学完一门课程。7门课程全部学完需要14个月。一旦学完这些课程，大家会发现自己的中医水平有了质的突破。以后无论是学习内、外、妇、儿还是学习各门各派，都会如鱼得水、游刃有余。
 
-能够达到这个学习要求是很不容易的，需要静下心来认真学习。我们见过很多学习者开始时候信心满满，学习一段时间后就因过程枯燥，半途而废。希望大家能认识到这一点，努力度过这个阶段。
+能够达到这个学习要求很不容易，需要静下心来认真学习。我们见过很多学习者开始时候信心满满，学习一段时间后就因过程枯燥，半途而废。希望大家能认识到这一点，努力度过这个阶段。
 
 现在中医式微，很多光明老学员担心中医的传承问题，是愿意带学生的，关键问题在于符合要求的学生难找。现在的中医学习者大多没有系统学习的经历，中医基础非常差，很难带。如果能系统学完经典，相信有很多老中医会愿意收入门下。 
 
