--- a/ok/rm/rm05.md
+++ b/ok/rm/rm05.md
@@ -4,7 +4,7 @@
 
 #### 1、形体与气血之间的平衡
 
-气血为形体的根本，两者互相配合有一个适度的平衡范围。如果气血的数量稍高于形体的基本需求，则人的活力旺盛、喜动，以儿童、青年为典型。如果稍低于形体的需求，则人相对沉稳、喜静，以中老年人为典型。两者相差不应过多。
+形体以气血为根本，气血可以为形体组织建立适宜的内在环境、输送营养和排除垃圾。正常情况下，气血的量是在适宜范围内波动的，量偏高的时候，有利于形体组织的生长与修复，量偏低的时候各种生命活动低沉。若气血量长期过低，则皮肉筋骨等形体组织开始出现问题。
 
 对应前面房间与暖气的例子，形体指的是房间，气血指的是暖气。房间大小应与暖气功率相匹配，形体大小应与气血的多少相匹配。
 
@@ -15,8 +15,6 @@
 > 形体如常，脉衰微不甚应指，预后多不良。这是因为脉之微甚，反映脏气的盛衰，脉微欲绝，说明脏气已败，故主死。形体衰弱，脉尚未衰微欲绝，与形体相比，相对有余的，预后多良好。这是因为脉尚有余，脏气未衰，故主生。
 >
 > 《黄帝内经讲解-(十三）脉证逆从》
-
-从人的一生角度看，气血与形体都有波动性。孩童形体幼小，气血也少，但两者相比，气血多于形体。青壮年，形体长成，气血也充沛，两者配合比较合适。老年则形体衰减，气血也衰减，两者相比，气血少于形体需求。这就是人一生的形体、气血波动趋势。
 
 #### 2、阳气波动与气血之间的关系
 
@@ -174,15 +172,17 @@
 >
 > 《黄帝内经讲解-养生学说》
 
-还要注意，这个规律不要教条化。对于已经失衡的病人，还是以调节平衡为先，不必拘于时间规律。比如虽说春夏养阳，但若是阴液不足之人，此时阳气与阴液的失衡更严重，必须补足阴液；说秋冬养阴，若是形体有严重气血不足的情况，未必不可以临时鼓动气血以缓解问题。
+还要注意，这个规律不要教条化。对于已经失衡的病人，还是以调节平衡为先，不必拘于时间规律。比如虽说春夏养阳，但若是阴液不足的阴虚之人，此时阳气增长，造成阴阳失衡更严重，必须补足阴液；说秋冬养阴，若是身体已经出现问题，有爆发疾病的风险，则完全可以临时鼓动气血以缓解问题。
 
 > 凡作汤药，不可避晨夕，觉病须臾，即宜便治，不等早晚，则易愈矣。如或差迟，病即传变，虽欲除治，必难为力。
 >
 > 《伤寒论讲解-伤寒例》
 
-#### 4、年龄增长与正邪波动变化
+#### 4、年龄增长的相关波动变化
 
-人随年龄的增长，先天之精越来越少，以肾精为代表的五脏精气也逐渐减少，供给给形体的气血能量越来越不足。随着正气的减弱，排除邪气的能力也减弱，于是身体中积累的痰饮、淤血等邪气越来越多。正愈虚而邪愈实，人就逐渐衰老，疾病增多、变重。
+从人的一生角度看，气血与形体都有波动性。孩童形体幼小，气血也少，但两者相比，气血多于形体，所以活力旺盛、喜动。青壮年，形体长成，气血也充沛，两者配合比较合适。老年气血衰减，形体也随之衰弱，两者相比，气血少于形体需求，所以喜静。这就是人一生的形体、气血波动趋势。
+
+随年龄的增长，气血衰减的主要原因是先天之精越来越少，以肾精为代表的五脏精气也逐渐减少，供给给形体的气血能量越来越不足，排除邪气的能力就减弱，于是身体中积累的痰饮、淤血等邪气越来越多。正愈虚而邪愈实，人就逐渐衰老，疾病增多、变重。
 
 ![img](img/%E4%BC%81%E4%B8%9A%E5%BE%AE%E4%BF%A1%E6%88%AA%E5%9B%BE_16218516681202.png)
 
