--- a/ok/rm/rm07.md
+++ b/ok/rm/rm07.md
@@ -120,7 +120,7 @@
 
 频率：脉搏正常频率应该是一呼一吸跳动四次，多于这个次数称之为数脉，代表有热；少于四次称为迟脉，代表有寒。
 
-高度：脉的高低是指轻按为高，又叫浮取，离皮肤近；重按为低，又叫沉取，离骨近；不轻不重在两者之间为中取；正常情况下，无论浮、中、沉，脉搏的感觉应相差不大。如果轻按的脉搏比重按的时候明显，称为浮脉，代表气血聚于表层。若重按的脉搏更明显，称为沉脉，代表气血聚集于里层。
+高度：脉的高低是指轻按为高，又叫浮取，离皮肤近；重按为低，又叫沉取，离骨近；不轻不重在两者之间为中取；正常情况下，无论浮、中、沉，脉搏的感觉应相差不大，代表气血分配较均匀。如果轻按的脉搏比重按的时候明显，称为浮脉，代表气血聚于表层。若重按的脉搏更明显，称为沉脉，代表气血聚集于里层。
 
 以上力度、频率、高度、宽度、长度、流速代表了脉搏的几大维度指标，每个指标都有其正常范围，超过正常范围则为失衡，向上失衡为阳，向下失衡为阴。所以《桂本伤寒论-平脉法第二》说“**凡脉大、浮、数、动、滑，此名阳也；凡脉沉、涩、迟、弦、微，此名阴也**”，其中浮、沉是从高度辨阴阳，滑、涩从流速辨阴阳，数、迟从频率角度辨阴阳，动、弦从长度辨阴阳，大、微从宽度辨阴阳。
 
