--- a/ok/gmrw/张世臣.md
+++ b/ok/gmrw/张世臣.md
@@ -14,4 +14,4 @@
 
 2000年退休后，应香港特区政府卫生署邀聘，赴港襄助中药管理相关工作（中药注册相关规定，中药GMP、GCP制定 ，与内地部分省市药检所、新药临床研究基地的合作等） 任中国中药协会副会长兼中药饮片专业委员会主任。
 
-张世臣十分重视中医教育，1984年，他担任了[光明中医函授大学](http://www.gmzy.org.cn/)的顾问一职。
+张世臣十分重视中医教育，1984年，他担任了[光明中医函授大学](http://www.gmzyjc.com/)的顾问一职。
