--- a/ok/gmrw/王克勤.md
+++ b/ok/gmrw/王克勤.md
@@ -4,7 +4,7 @@
 
 ![img](img/20190827094057e02cbf.jpg)
 
-他1941年3月出生，山东省肥城市人，汉族，中共党员。1960年包头工业专科学校毕业，1961年南京航空学院肄业，1966年牡丹江中医班提前毕业，走“6.26”道路至850农场医院，1971年调回牡丹江医专从事中医教学与临床，1979年考入中国中医研究院研究生班师从方药中教授，1981年研究生毕业并获硕士学位，1982年起省祖研工作至今。研究员、主任医师、硕士生导师，享受国务院政府特殊津贴。曾任省祖研副所长、省中医研究院副院长，1988年辞“官”而专心业务。曾任[光明中医函授大学](http://www.gmzy.org.cn/)黑龙江分校常务副校长、省中医药学会副秘书长、《中国中医药科技》常务副主编兼编辑部主任、中医心理学研究室主任、中医文献研究室主任、老年病科主任、疑难病科主任等职。现任世界中医药学会联合会中医心理学专业委员会名誉会长并荣获学术贡献奖，此外还兼任中国民间中医药协会中医心理学专业委员会主任委员、中华中医药学会亚健康分会理事、国家自然科学基金项目评审专家、国家中医药管理局《中国中医药年鉴》编委、中华医学会《国际中医中药杂志》（原《国外医学中医中药分册》）编委、省药品审评委员会委员、哈市心理学心身医学研究所名誉所长、《上海中医药大学学报》及《光明中医》等多家学报、杂志编委等职。
+他1941年3月出生，山东省肥城市人，汉族，中共党员。1960年包头工业专科学校毕业，1961年南京航空学院肄业，1966年牡丹江中医班提前毕业，走“6.26”道路至850农场医院，1971年调回牡丹江医专从事中医教学与临床，1979年考入中国中医研究院研究生班师从方药中教授，1981年研究生毕业并获硕士学位，1982年起省祖研工作至今。研究员、主任医师、硕士生导师，享受国务院政府特殊津贴。曾任省祖研副所长、省中医研究院副院长，1988年辞“官”而专心业务。曾任[光明中医函授大学](http://www.gmzyjc.com/)黑龙江分校常务副校长、省中医药学会副秘书长、《中国中医药科技》常务副主编兼编辑部主任、中医心理学研究室主任、中医文献研究室主任、老年病科主任、疑难病科主任等职。现任世界中医药学会联合会中医心理学专业委员会名誉会长并荣获学术贡献奖，此外还兼任中国民间中医药协会中医心理学专业委员会主任委员、中华中医药学会亚健康分会理事、国家自然科学基金项目评审专家、国家中医药管理局《中国中医药年鉴》编委、中华医学会《国际中医中药杂志》（原《国外医学中医中药分册》）编委、省药品审评委员会委员、哈市心理学心身医学研究所名誉所长、《上海中医药大学学报》及《光明中医》等多家学报、杂志编委等职。
 
 ![img](img/201908270940573b4956.png)
 
