--- a/ok/rm/rm02.md
+++ b/ok/rm/rm02.md
@@ -444,7 +444,7 @@
 >
 > 《黄帝内经讲解-运气学说-六气的常变》
 
-天气、地气随年份变化，受星体影响的情况是比较复杂的，内经中已经进行了规律总结，大约就是以六十年为周期，不同的年份对六气和五运各有不同的作用，或加强或减弱。光明教材[《黄帝内经讲解-运气学说》](https://www.gmzy.org.cn/read/hdnjs/hdnj11.md)是专门讲述这方面的知识，内容比较深奥，有兴趣的人可以自行参考。
+天气、地气随年份变化，受星体影响的情况是比较复杂的，内经中已经进行了规律总结，大约就是以六十年为周期，不同的年份对六气和五运各有不同的作用，或加强或减弱。光明教材[《黄帝内经讲解-运气学说》](https://www.gmzyjc.com/read/hdnjs/hdnj11.md)是专门讲述这方面的知识，内容比较深奥，有兴趣的人可以自行参考。
 
 
 
