--- a/ok/rm/rm07.md
+++ b/ok/rm/rm07.md
@@ -84,7 +84,7 @@
 
 > 两眉之间，名为印堂，又称阙中，在面部中间的最高之处，是相关肺病的部位；印堂的上面，名为阙上，阙上到头发边缘，名为天庭，天庭处在整个面部最高最上的地方，是相关头面疾病的部位；阙上处在天庭和印堂之中，所以是相关头面及咽喉疾病的部位，印堂略向下，在两眼之间，名为山根，又称下极，是相关心病的部位......
 >
-> [《口诀浅释》](https://www.gmzy.org.cn/read/qs/qs01.md#_2)
+> [《口诀浅释》](https://www.gmzyjc.com/read/qs/qs01.md#_2)
 
 ##### 3.2、脉象
 
