--- a/ok/fjx/fjx04-0.10.0.0.0.md
+++ b/ok/fjx/fjx04-0.10.0.0.0.md
@@ -1,6 +1,6 @@
 ## 龙胆泻肝汤《太平惠民和剂局方》
 
-〔组成〕龙胆草酒拌炒（10克） 柴胡各一钱（10克）泽泻（12克）车前子炒（10克） 木通（10克） 生地黄酒拌炒（10克） 当归尾酒拌〈10克） 栀子炒（10克） 黄芩酒炒（10克） 甘草各五分（10克）
+〔组成〕龙胆草酒拌炒（10克） 柴胡各一钱（10克）泽泻（12克）车前子炒（10克） 木通（10克） 生地黄酒拌炒（10克） 当归尾酒拌（10克） 栀子炒（10克） 黄芩酒炒（10克） 甘草各五分（10克）
 
 〔服法〕原方㕮咀，清水三大碗煮至一杯，食远热服，更以美膳压之。（水煎饭前服）。
 
