--- a/ok/rm/rm03-0.5.0.0.0.md
+++ b/ok/rm/rm03-0.5.0.0.0.md
@@ -228,7 +228,7 @@
 
 #### 2.1、概述
 
-人体地气指人体的固液态物质，包括脏腑、皮肉筋骨、津液、血等。其中的津液、血已经在前面章节叙述过了。
+人体地气指人体的固液态物质，包括脏腑、皮肉脉筋骨、津液、血等。其中的津液、血已经在前面章节叙述过了。
 
 这些固液态物质与气态物质进行物质和能量交互，类似自然界天地气交、云升雨降的过程。
 
@@ -297,6 +297,16 @@
 > 《中医诊法-中药-方剂口诀--望诊》
 
 脏腑之气各有通道进入对应的经络，是经络之气的组成部分。比如心气注入手少阴心经，如果心气不足，则在心经通道上会出现能量不足的发冷症状，其它脏腑类似。
+
+因经络互相连接，所以脏腑之气进入对应经络之后，又随经络散布到全身。全身的脏腑之气作用于血而养形体，肺气侧重于养皮、心气侧重养脉、脾气侧重养肌肉、肝气侧重养筋、肾气侧重养骨。
+
+> **心之合脉**也，其荣色也，其主肾也（1）；**肺之合皮**也，其荣毛也，其主心也（2）；**肝之合筋**也，其荣爪也，其主肺也（3）；**脾之合肉**也，其荣唇也，其主肝也（4）；**肾之合骨**也，其荣发也，其主脾也（5）。
+>
+> 《素问·五藏生成篇》
+
+> 初持脉，如三菽之重，与皮毛相得者，肺部也。如六菽之重，与血脉相得者，心部也。如九菽之重，与肌肉相得者，脾部也。如十二菽之重，与筋平者，肝部也。按之至骨，举指来疾者，肾部也。故曰轻重也。
+>
+> 《难经-五难》
 
 #### 2.4、五行对应
 
