--- a/ok/rm/rm04.md
+++ b/ok/rm/rm04.md
@@ -15,7 +15,7 @@
 >
 > 《黄帝内经讲解-寿夭与先后天的关系》
 
-形体变化一般延后于气血变化。气血失衡一段时间后，形体上会有可见的异常变化。气血恢复平衡一段时间后，异常的形体变化才会开始趋向正常。
+形体变化一般延后于气血变化。气血失衡一段时间后，形体上会有可见的异常变化。气血恢复平衡一段时间后，异常的形体变化才会开始趋向正常。这与温室花园里的环境失衡后，花草会逐渐枯萎；环境恢复平衡后，花草需要一段时间才能长好，是一个道理。
 
 中医讨论的疾病大部分在这个环节，即气血充养形体、脏腑过程中遇到的问题。以后在学习《伤寒论》、《金匮要略》、《温病条辨》的时候会探讨人体各个部位（皮肉筋骨脉、头项胸腹肩背腰、四肢关节、脏腑经络）的正（元气、宗气、营卫气、津、血）虚和邪（风热暑湿燥寒、痰饮、淤血）实问题。了解这些问题的外在表现，及如何判断与治疗。
 
@@ -77,9 +77,9 @@
 >
 > 《黄帝内经讲解-血气精神的重要作用》
 
+6、脏腑经络：
 
-
-6、脏腑功能中，因五脏对几大要素的作用最大，比如五脏藏神、心主血脉、肾藏精、肝藏血、肺主气等等，所以五脏功能最为关键。若五脏失衡，对人体要素的产生、体内环境的形成影响最大，内经说治五藏者半生半死。
+在神的控制下，精生气血以养形体。过程中，脏腑起主要作用。五脏对几大要素的作用最大，比如五脏藏神、心主血脉、肾藏精、肝藏血、肺主气等等，所以五脏功能最为关键。若五脏失衡，对人体要素的产生、体内环境的形成影响最大，内经说治五藏者半生半死。
 
 > **邪风之至，疾如风雨，故善治者治皮毛，其次治肌肤，其次治筋脉，其次治六府，其次治五藏,治五藏者，半死半生也。**
 >
@@ -91,11 +91,9 @@
 >
 > 《素问•五藏别论篇第十一》
 
-总的来说，脏腑产生气血以养形体。若是细化的话，则五脏之气又各自侧重营养不同组织。肾主骨生髓，肾精不足，则骨质疏松，骨髓亏损。其它心主血脉、肺主皮毛、脾主肉、肝主筋皆为同理。
+经络、血脉、三焦作为要素传递通道，需畅通无阻，其中以经络通畅为主导。
 
-光明教材对中医整体观的介绍就是人体是一个以五脏为中心，并通过经络系统，把六腑、九窍、四肢百骸等全身组织器官联系成有机的整体。也因此，五脏代表的人体地气五行的平衡至关重要。五行学说与阴阳学说并重，作为《中医药学概论》第一章的内容，是中医学的最基础内容。
-
-
+人体以五脏为中心，生成并存储精、神、元气、气态物质、血、津液等要素，再以经络系统为主导，将要素传递到全身组织器官，形成适宜的体内环境，完成人体的整体功能活动。这就是中医的整体观。
 
 ### 2、几大指标失衡的常见情况
 
@@ -136,15 +134,7 @@
 >
 > 《伤寒论讲解-40条》
 
-### 3、整体观：
 
-几大指标的失衡就是中医的证，一般情况下，阴虚补阴、阳虚补阳、有饮去饮、有痰去痰，对证治疗就可以。
-
-但是中医更有难度的地方在整体观。因人体的脏腑、精神、经络、形体各司其职，互为因果。有时出现病证的地方不一定是根源所在。而如果没有找到病的根源，则治疗效果可能不明显。寻找疾病的根源则必须熟悉中医的理论，了解人体的运转机制。
-
-以《金匮要略》中的肺痿病为例，肺痿从原理上来说，是肺中津液极为虚少，形成肺部阴虚燥热的证型，这种情况的表现是咳嗽，时不时的吐出涎沫稠痰，或者吐出不腥臭的脓血，脉虚数等。遇到此情况，我们要考虑造成肺部津液虚少的根本原因，如果是消耗过多，比如大汗、小便过多、泻下过多等原因，用麦门冬汤直接补充肺部津液即可。但若没有过度消耗的情况，也出现了肺部阴虚，则要从补充的角度考虑。肺部的津、血、阳气需要先后天之精的补充，若脾胃不足或者肾精不足，也可造成肺部的阴虚或者阳虚。此时用麦门冬汤可能就效果不显著，需要从健脾胃和补益肾精的角度考虑。
-
-此外中医的部位划分也是一个重要的特色内容，详细的部位划分放在后面的章节介绍。
 
 
 
