--- a/ok/rm/rm05.md
+++ b/ok/rm/rm05.md
@@ -60,7 +60,7 @@
 >
 > 《黄帝内经讲解-阴精与阳气的主要功能和关系》
 
-<注>:"阴者，藏精而起亟也；阳者，卫外而为固也"，传统上，此处理解阴为阴精，阳为阳气，因解释不通顺，是中医的一个难点。此处的阴应理解为内在五脏、阳为外在形体，对应内经的“内为阴，外为阳”比较好。
+<注>:"阴者，藏精而起亟也；阳者，卫外而为固也"，传统上，此处理解阴为阴精，阳为阳气，因解释不通顺，是中医的一个难点。此处的阴应理解为内在五脏，可藏精，阳理解为外在形体，可保卫脏腑，对应内经的“内为阴，外为阳”比较好。
 
 ##### 3.1、一年四季的变化
 
