--- a/ok/qs/qs05.md
+++ b/ok/qs/qs05.md
@@ -412,7 +412,7 @@
 
 **若虚胀，且踌躇，中央健，四旁如，参竺典，大地舆。**
 
-**踌躇**chouzhu，读仇除。指很费心思，需再三考虑。 **中央** 此处指中焦脾胃。**竺典** 竺zhu，读竹，指佛经。 **大地舆** 舆yu，读蛊。乘载。大地舆，即大地乘载万物的意思。
+**踌躇**chouzhu，读仇除。指很费心思，需再三考虑。 **中央** 此处指中焦脾胃。**竺典** 竺zhu，读竹，指佛经。 **大地舆** 舆yu，读盂。乘载。大地舆，即大地乘载万物的意思。
 
 凡属虚性、慢性的胀满病，临证必须反复斟酌辨认，不可草率从事。治疗虚性胀满病总的原则，应使位居中央的脾胃健运，四旁气机畅通运转自如，正如佛经所说的那样：万物都乘载在大地这辆车子上，大地一转，万物都随着转动了。
 
