--- a/ok/gmzy/gmzy012-1.md
+++ b/ok/gmzy/gmzy012-1.md
@@ -63,9 +63,9 @@
 
 为了让学员用最短的时间达到中医入门的程度，网校提取了主要的7门课程放在学习平台（https://zuoye.gmzyh.com）上，供报名学员使用。这7门课为《概论》、《本草》、《方剂》、《内经》、《伤寒》、《金匮》、《温病》。这些课程包含了四大经典及其学习基础。中医无论怎样变化，都是以经典为根本的。能否认真学完经典，是业余爱好者和专业人士的分水岭。对于真心想学好中医的学员，只要在学习平台上认真完成全部作业，医理就能确保过关。在光明中医的教学要求里，这些课程已经是最基础、最低的要求了，如果这些课程都不能认真学完，想成为合格的中医恐怕很难。
 
-在学习时间方面，如果学员每天能拿出2-3个小时学习的话，大约2个月可以学完一门课程。7门课程全部学完需要14个月。一旦学完这些课程，大家会发现自己的中医水平有了质的突破。以后无论是学习内、外、妇、儿还是学习各门各派，都会如鱼得水、游刃有余。
+在学习时间方面，如果学员每天能拿出2-3个小时学习的话，大约2个月可以学完一门课程。7门课程全部学完需要一年半到两年的时间。两年时间看似慢，实则快。因为一旦学完这些课程，就真正进入中医之门，水平有了质的突破。如果不尊重中医前辈的教育经验，自以为是、胡乱学习，可能十年、甚至一辈子也入不了中医之门。
 
-能够达到这个学习要求很不容易，需要静下心来认真学习。我们见过很多学习者开始时候信心满满，学习一段时间后就因过程枯燥，半途而废。希望大家能认识到这一点，努力度过这个阶段。
+能够完成这些学习要求也不太不容易，需要静下心来认真学习。我们见过很多学习者开始时候信心满满，学习一段时间后就因过程枯燥，半途而废。希望大家能认识到这一点，努力度过这个阶段。
 
 现在中医式微，很多光明老学员担心中医的传承问题，是愿意带学生的，关键问题在于符合要求的学生难找。现在的中医学习者大多没有系统学习的经历，中医基础非常差，很难带。如果能系统学完经典，相信有很多老中医会愿意收入门下。 
 
