--- a/ok/gmzy/gmzy012-1.md
+++ b/ok/gmzy/gmzy012-1.md
@@ -65,7 +65,7 @@
 
 在学习时间方面，如果学员每天能拿出2-3个小时学习的话，大约2个月可以学完一门课程。7门课程全部学完需要一年半到两年的时间。两年时间看似慢，实则快。因为一旦学完这些课程，就真正进入中医之门，水平有了质的突破。如果不尊重中医前辈的教育经验，自以为是、胡乱学习，可能十年、甚至一辈子也入不了中医之门。
 
-能够完成这些学习要求也不太不容易，需要静下心来认真学习。我们见过很多学习者开始时候信心满满，学习一段时间后就因过程枯燥，半途而废。希望大家能认识到这一点，努力度过这个阶段。
+能够完成这些学习要求也不大容易，需要静下心来认真学习。我们见过很多学习者开始时候信心满满，学习一段时间后就因过程枯燥，半途而废。希望大家能认识到这一点，努力度过这个阶段。
 
 现在中医式微，很多光明老学员担心中医的传承问题，是愿意带学生的，关键问题在于符合要求的学生难找。现在的中医学习者大多没有系统学习的经历，中医基础非常差，很难带。如果能系统学完经典，相信有很多老中医会愿意收入门下。 
 
