--- a/ok/rm/rm03-0.1.0.0.0.md
+++ b/ok/rm/rm03-0.1.0.0.0.md
@@ -14,7 +14,7 @@
 
 人体内的水，中医称为津液，对应自然界的水。
 
-干净的水进入体内后，滋润各个脏腑组织，然后携带代谢废物，主要以小便的形式，辅以汗液等形式排出体外。
+干净的水进入体内，与营养物质混合，滋润各个脏腑组织，然后携带代谢废物，主要以小便的形式，辅以汗液等形式排出体外。
 
 其中清稀的为津，粘稠的为液。
 
