--- a/ok/rm/rm05.md
+++ b/ok/rm/rm05.md
@@ -18,7 +18,7 @@
 
 #### 2、阳气波动与气血之间的关系
 
-内经强调了阳气的作用，但这是在平衡范围内的作用，不要走入极端。抛弃平衡单独强调阳气是错误的。
+阳气作用于阴液而生气血，各要素皆有平衡。其中阳气虽然重要，但不要走入极端，只强调阳气是错误的。
 
 如前所述暖气的例子，暖气完成供暖功能，需要火、水皆在平衡范围内。水火相对而言，火为阳，有主动性；水为阴，有被动性。调节暖气的输出功率时，只要调节火的大小，水温和蒸汽量即随之增减。火大则水、气皆热，火小则水、气皆寒，这就是阳主而阴从。
 
@@ -30,7 +30,7 @@
 
 因此，阳主阴从、阳气为主导的含义是水火在平衡波动的前提下，火起主导作用，而非不考虑水的多少，一味的增加火量。
 
-人体也一样，中医往往通过阳气的波动来代表整个气血的波动，但不意味着不考虑阴液的因素。人的津血正常的情况下，阳气适当增加，则人体的气足，反之则气稍弱。但若在津血虚的情况下，单纯增加阳气会更加消耗津血。
+人体也一样，中医往往通过阳气的波动来代表整个气血的波动，但不意味着不考虑阴液的因素。人的津液正常的情况下，阳气适当增加，则人体的气足，反之则气稍弱。但若在津液虚的情况下，单纯增加阳气会更加消耗津液。
 
 人体单纯阳虚则补阳；单纯阴虚则补阴；阴阳两虚则用侧重补阳的甘温之剂，虽侧重补阳，但也兼顾补阴。
 
