--- a/ok/rm/rm03-0.3.0.0.0.md
+++ b/ok/rm/rm03-0.3.0.0.0.md
@@ -104,9 +104,9 @@ graph TB
 >
 > 《黄帝内经讲解-人与自然- 精、气、津、液、血、脉的生成和功用》
 
-血具体形成哪种组织又与脏气有关，肺主皮毛、心主血管、脾主肌肉、肝主筋、肾主骨生髓，具体见后面五脏之气部分。
+血具体形成哪种组织又与脏气强弱有关，具体见后面五脏之气部分。
 
-血是精神活动的物质基础，血的异常，包括血虚、血热、血瘀等，可以造成精神失常。
+血是精神活动的物质基础，血的失衡，包括血虚、血热、血瘀等，可以造成精神失常。
 
 > 此外，**血是人体精神活动**的主要物质基础。《灵枢·本神》说：“心藏脉，脉舍神。肝藏血，血舍魂”。都说明血与精神活动密切相关。故若血虚、血热或血瘀，均可出现不同程度的精神情志失常的病变。轻则失眠多梦，烦躁，重则神志恍忽，惊悸不安，或谵语、狂妄、昏迷不语。
 >
