--- a/ok/rm/rm03-0.5.0.0.0.md
+++ b/ok/rm/rm03-0.5.0.0.0.md
@@ -46,6 +46,16 @@
 >
 > 《黄帝内经讲解-藏象-宗气的生成和功用》
 
+##### 循行：
+
+宗气虽主要聚集于胸中，但也能行于全身，而且也沿经络运行。
+
+> 上焦为宗气所聚之处，宗气能推动营气运行全身，白天与营气偕行二十五周次，夜晚偕行二十五周次，一昼夜共行五十周次，总会于手太阴肺经。
+>
+> 《黄帝内经讲解-三焦的部位与功用》
+
+
+
 ##### 功能：
 
 帮助肺呼吸，推动营气运行,帮助心运送血。
@@ -206,23 +216,17 @@
 
 营卫之气行于经络，由此可见，经络应为气态物质的运行通道，存在于各种组织器官的间隙之中。如内经说卫气“**循皮肤之中，分肉之间，熏于肓膜，散于胸腹**”，张景岳说“凡腔腹肉理之间，上下**空隙**之处，皆谓之肓”。
 
-
-
 营卫二气互相配合，营气负责营养，卫气负责温煦与护卫。两者配合不协调，则发生营卫不和的疾病。例如《伤寒论》的太阳中风证，为太阳区域受风邪侵袭，造成卫强而营弱的情况，表现为头痛、发热、汗出、怕风，用桂枝汤调和营卫治疗。
 
 营卫之气来自水谷之气。水谷本为固液态，在脏腑元气的作用下成为津血，进而化为气态的营卫。这种固液态与气态的相互转化，体现了阴阳互根互用的原理，与自然界太阳照射海水，蒸汽升而为云的现象很相似。
-
-足够的元气作用津血，可以产生足够的营卫之气。反之，无论元气不足还是津血不足，都不能产生足够的营卫之气，也就是气虚。
-
-> 是故五脏主藏精者也，不可伤，伤则失守而阴虚；**阴虚则无气，无气则死矣**。
->
-> 《黄帝内经灵枢-本神》
 
 宗气由吸入的自然之气与营卫之气混合而成，因此高质量的呼吸有利于宗气的形成。
 
 > 古有真人者，提挈天地，把握阴阳，**呼吸精气**，独立守神，肌肉若一，故能寿敝天地，无有终时，此其道生。
 >
 > 《素问-上古天真论》
+
+总体来讲，宗气主要来自上焦，营气主要在中焦，卫气主要来自下焦。经络是气态物质的主要通道，特殊情况也可在经络之外运行。
 
 ## 2、人体地气
 
@@ -232,9 +236,9 @@
 
 这些固液态物质与气态物质进行物质和能量交互，类似自然界天地气交、云升雨降的过程。
 
-从物质角度看，人的血、津液中含有空气中传入的氧等物质。人体的营卫等气态物质是饮食而入的固液态物质转化而成。
+从物质角度看：人的血、津液中含有空气中传入的氧等物质，此为天气化为地气。人体的营卫等气态物质是饮食而入的固液态物质转化而成，此为地气化为天气。
 
-从能量角度看，人体的形质也是按照五行划分，代表不同部分的能量差异。
+从能量角度看，就像太阳照耀大地，形成东南西北中的五行能量差异一样，人体的形质也是按照能量差异进行五行划分。
 
 #### 2.2、脏腑五行
 
@@ -344,19 +348,11 @@
 | 金   | 收   | 毛（浮） |
 | 水   | 藏   | 石（沉） |
 
-这种对应关系对中医辩识病症有很重要的作用。因为中医不能直接观测到脏腑的平衡状态，所以采用观察相关的外在表现来推知脏腑状态，通过五味、五色、五音、五脉等的异常来判断脏腑异常，这就是中医望、闻、问、切四诊的由来。
-
 ## 3、总结
 
-人体的元气、天气、地气外应自然界的阳光、空气、大地。人体从能量分配角度分三阴三阳六大区域，人体的气态物质流转于相应区域的时候，就称为对应的六气。比如厥阴区域的气为风，少阴区域的气为热，太阴区域为湿，少阳区域为相火（对应暑），阳明区域为燥，太阳为寒。
+经络中的气态物质包括卫气、营气、宗气，也包括脏腑产生的脏腑之气。气态物质配合津、血等液态物质，共同营养形体。
 
-> **厥阴之上，风气主之；少阴之上，热气主之；太阴之上，湿气主之；少阳之上，相火主之：阳明之上；燥气主之；太阳之上，寒气主之。所渭本也，是谓六元。**
->
-> 《素问·天元正纪大论》
-
-天气与地气对应，风对木，热暑对火，湿对土，燥对金，寒对水，所以用厥阴风木、少阳相火、少阴君火、阳明燥金、太阳寒水的名词来表示六大区域。
-
-总的来说，在元气作用下，人体的固、液、气三类物质的形态相互转换；能量状态在时间维度上波动，在空间维度上各有差异，这种波动和差异又都在各自的平衡范围内，从而形成了人体的适宜内环境。这是根据“天人合一”的道理，通过观察大自然推导出的人体规律。
+总的来说，人体的元气、气态物质、津血、形体 外应自然界的阳光、空气、水、土。在元气作用下，人体的固、液、气三类物质的形态相互转换；能量状态在时间维度上波动，在空间维度上各有差异，这种波动和差异又都在各自的平衡范围内，从而形成了人体的适宜内环境。这是根据“天人合一”的道理，通过观察大自然推导出的人体规律。
 
 > 六腑者，所以受**水谷**而行化物者也。水谷入胃，脾气消磨，渣滓下传，精微上奉，化为**雾气**，归之于肺，肺司气而主皮毛，将此**雾气，由脏而经，由经而络，由络而播宣皮腠，熏肤充身泽毛，是谓六经之气。雾气降洒，化而为水，津液精血**于是生焉。阴性亲内，自皮而络，自络而经，自经而归趋脏腑。
 >
