--- a/ok/rm/rm03-0.5.0.0.0.md
+++ b/ok/rm/rm03-0.5.0.0.0.md
@@ -20,81 +20,11 @@
 
 ## 1、人体天气
 
-人体的天气指的是人体中的气态物质，以水蒸汽和气雾状营养物质的形态，存在于经络、腠理以及各种空腔器官、孔窍等处。从功能上主要分为以下几种：宗气、营气、卫气、脏腑之气
+人体的天气指的是人体中的气态物质，以水蒸汽和气雾状营养物质的形态，存在于经络、腠理以及各种空腔器官、孔窍等处。从功能上主要分为以下几种：营气、卫气、宗气、脏腑之气
 
-#### 1.1、宗气
+#### 1.1、营气
 
-##### 形成：
-
-脾胃吸收的水谷精微之气从中焦进入上焦后，与肺吸入的自然之气结合成为宗气。
-
-> 水谷所化生的精微之气，先出于中焦，升则行于上焦，在上焦和吸入的自然之气相结合而形成为宗气，宗气汇聚于胸部膻中，所以膻中又称为气海。
->
-> 《黄帝内经讲解-藏象-宗气的生成和功用》
-
-> **肺主一身之气，自然之气由肺吸入，水谷精气经脾上归于肺，合而为宗气**，积于胸中气海。上出喉咙以司呼吸，贯心脉而布散周身。心主血脉，肺主治节，全身经脉都聚会于肺，赖**肺气的推动，血液始能转输全身**，营养脏腑器官。肺主通调水道，由脾上输的水液，赖肺气的宣散作用，水液才能敷布全身。而且肺有肃降作用，能通过使水液下输膀胱的方式，调节水液代谢，使之趋于平衡。只有肺主宣发，肺主肃降的功能正常，全身脏腑器官才能得到宗气、血、津液等不同形式的水谷精微的濡养，以维持正常的生理活动，所以称肺为“脏之长”。
->
-> 《黄帝内经讲解-藏象-肺为各脏之长》
-
-##### 位置：
-
-汇聚在胸部膻中穴（气海），在心肺的作用下，散布于全身。
-
-> “胸中”，指膻中，即上气海。“脉”，《太素》卷十二《营卫气行》、《甲乙》卷十二第三作“肺”，于义也通可参。宗气在上积聚于胸中气海，贯注于心脉，行于呼吸之道：故宗气既行于脉内，又布于脉外。《灵枢•刺节真邪》说：“宗气留于海，其下者注于气街，其上者走于息道。”宗气在下汇集于丹田，经足阳明气街，下行于足，可见宗气既行于上，也运于下。说明宗气虽积于胸，而实能循行全身，正如张景岳注《灵枢•刺节真邪论》所说：宗气“其下者蓄于丹田，注足阳明之气街而下行于足；其上者积于胸中，出于息道而为呼吸。”...
->
-> 宗气由肺吸入的自然界清气合脾胃水谷之精气化生而后，并贯脉，赖**心肺的作用**转输全身。
->
-> 《黄帝内经讲解-藏象-宗气的生成和功用》
-
-##### 循行：
-
-宗气虽主要聚集于胸中，但也能行于全身，而且也沿经络运行。
-
-> 上焦为宗气所聚之处，宗气能推动营气运行全身，白天与营气偕行二十五周次，夜晚偕行二十五周次，一昼夜共行五十周次，总会于手太阴肺经。
->
-> 《黄帝内经讲解-三焦的部位与功用》
-
-
-
-##### 功能：
-
-帮助肺呼吸，推动营气运行,帮助心运送血。
-
-功能失常可以引起血脉凝滞，可以影响肢体温度、运动，以及心脏的波动。
-
-> 宗气贯通心脉、息道，有助肺行呼吸，心运营血的作用。所以，宗气不但因能行息道、贯肺脉，而与呼吸、声音的强弱有关，而且因宗气又能贯注血脉，与血液运行也有密切的联系。若宗气失常，正如《灵枢•刺节真邪论》所说“宗气不下，脉中之血，凝而留止”，可引起血脉凝滞的病变，而影响肢体的寒温、运动，以及心脏搏动。如《素问•平人气象论》所说，“胃之大络，名曰虚里，贯膈络肺，出于左乳下，其动应衣，脉宗气也。盛喘数绝者，其病在中……绝不至，曰死。乳之下，其动应衣，宗气泄也。”
->
-> 《黄帝内经讲解-藏象-宗气的生成和功用》
-
-> 以功能言，上焦为肺所居，宗气之所聚，而宗气由胃中水谷精微所化生，上行至肺，然后布散全身，所以上焦之气也出于胃上口。...
->
-> 上焦为宗气所聚之处，宗气能推动营气运行全身，白天与营气偕行二十五周次，夜晚偕行二十五周次，一昼夜共行五十周次，总会于手太阴肺经。
->
-> 《黄帝内经讲解-藏象-三焦的部位和功用》
-
-##### 失常的判断与调整：
-
-###### 判断
-
-> 精神不振，面色晦暗，面目浮虚、心悸气短、呼吸不畅、语言低沉、稍劳即心跳心慌、气短喘促；
->
-> 甚则唇面紫绀、爪甲青紫、吸短呼长、喘促难卧、喉中痰鸣、心慌无主、虚里动衣；
->
-> 危者，宗气外泄，心神失附、心慌烦躁、神识恍惚、呼吸浅短难续、冷汗淋漓、肤凉肢厥、脉微欲绝、二便难禁甚或失禁。
->
-> 《黄帝内经讲解-藏象-宗气的生成和功用》
-
-###### 调整
-
-> 宗气不足之证，大多因心肺久虚所致，且宗气虚衰，又大多导致心肺阳气俱虚，所以临床治疗，大多从补心益肺、益气扶阳入手。如是宗气虚极而外泄欲脱者，治当益气扶阳，收敛宗气，可用参附汤加生龙骨、生牡蛎、五味子治之。
->
-> 《黄帝内经讲解-藏象-宗气的生成和功用》
-
-#### 1.2、营气
-
-##### 产生
-
-产生于中焦脾胃消化的水谷之气中的精纯部分。
+营气是中焦脾胃消化的水谷之气中的精纯部分，其功能是营养全身，内含脏腑，外括形体。
 
 > **中焦亦并胃中，出上焦之后（1），此所受气者，泌糟粕，蒸津液，化其精微，上注于肺脉，乃化而为血（2），以奉生身，莫贵于此，故独得行于经隧，命曰营气（3）。**
 >
@@ -130,7 +60,7 @@
 >
 > 《黄帝内经讲解-藏象- *营*卫的生成和功能》
 
-#### 1.3、卫气
+#### 1.2、卫气
 
 ##### 产生:
 
@@ -148,7 +78,7 @@
 
 ##### 循行：
 
-卫气行于脉外。
+卫气行于经络之中，血脉之外。
 
 白天走手足三阳经二十五周。
 
@@ -180,12 +110,6 @@
 >
 > 《灵枢-营卫生会》
 
-由此可见，气态物质正常情况下，沿经络行走。但特殊情况下，也可以走其它道路，或者以弥漫渗透的方式穿过形体组织。在《中医儿科学》的小儿哮喘病中，谈到此病的病根为肺中伏痰，但过食冷、酸、咸的食物会诱发，就是因为小儿器官娇嫩，冷酸等气态物质浸入肺腑而发病。
-
-> 小儿**肺脏娇嫩**，治节失司；脾气虚弱，运化无权；肾阳不振，失于蒸化，酿生痰湿内停，留伏肺俞，是为潜在内因；而气候变化，寒暖失常，感受六淫；饮食不当，或**过食生冷酸咸**；以及吸入花粉、绒毛、灰尘，接触油漆、煤气、刺激性气体；甚至啼哭呛乳，均乃诱发哮喘的外来因素。故本病虽发作于肺，而又与脾肾二脏有关。
->
-> 《中医儿科学-哮喘》
-
 ##### 功能：
 
 > 卫气的功能有三个方面：
@@ -199,6 +123,54 @@
 > 故《灵枢·本藏》说：“卫气者，所以温分肉，充皮肤，肥腠理，司开合者也”、“卫气和，则分肉解利，皮肤润柔，腠理致密矣”。
 >
 > 《中医药学概论-藏象-气》
+
+#### 1.3、宗气
+
+宗气是在上焦心、肺部位形成的一种气态物质，由吸入的自然空气与脾胃上升而来的水谷精微之气结合而成。其作用是帮助肺进行呼吸、帮助心运行血液、推动营气运行。
+
+> **肺主一身之气，自然之气由肺吸入，水谷精气经脾上归于肺，合而为宗气**，积于胸中气海。上出喉咙以司呼吸，贯心脉而布散周身。
+>
+> 《黄帝内经讲解-藏象-肺为各脏之长》
+
+宗气聚集于上焦胸部，但能循行于全身，其路线与营气是一致的。
+
+> 宗气汇聚于胸部膻中，所以膻中又称为气海。
+>
+> 《黄帝内经讲解-藏象-宗气的生成和功用》
+
+> 上焦为宗气所聚之处，宗气能推动营气运行全身，白天与营气偕行二十五周次，夜晚偕行二十五周次，一昼夜共行五十周次，总会于手太阴肺经。
+>
+> 《黄帝内经讲解-三焦的部位与功用》
+
+宗气与营气一样可以灌注到血脉之中。
+
+> 宗气在上积聚于胸中气海，贯注于心脉，行于呼吸之道：**故宗气既行于脉内，又布于脉外**。《灵枢•刺节真邪》说：“宗气留于海，其下者注于气街，其上者走于息道。”宗气在下汇集于丹田，经足阳明气街，下行于足，可见宗气既行于上，也运于下。说明宗气虽积于胸，而实能循行全身，正如张景岳注《灵枢•刺节真邪论》所说：宗气“其下者蓄于丹田，注足阳明之气街而下行于足；其上者积于胸中，出于息道而为呼吸。”...
+>
+> 《黄帝内经讲解-藏象-宗气的生成和功用》
+
+单纯吸入的空气不足以完成宗气之功能，需要水谷之气的补充，所以如果水谷之气不足，则宗气虚。当然吸入之气不足，宗气也虚。所以高质量的呼吸以及健康的脾胃可以产生充足的宗气。
+
+> 其大气之搏而不行者，积于胸中，命曰气海，出于肺，循咽喉，故呼则出，吸则入。天地之精气，其大数常出三入一，故**谷不入，半日则气衰**，一日则气少矣。
+>
+> 《灵枢-五味》
+
+宗气不足，则影响呼吸功能和血液的运行功能，可引起血脉凝滞，进而在肢体温度、运动、心脏跳动等方面出现异常。
+
+其表现：
+
+轻则面色晦暗、心悸、气短、喘促、呼吸不畅。
+
+中则唇面紫绀、爪甲青紫、吸短呼长、喘促难卧、喉中痰鸣、心慌无主、虚里动衣。
+
+重则心神失附、心慌烦躁、神识恍惚、呼吸浅短难续、冷汗淋漓、肤凉肢厥、脉微欲绝、二便难禁甚或失禁。
+
+宗气不足的原因：
+
+直接原因往往是心肺功能下降引起。
+
+间接原因可能是脾胃功能下降，因宗气有一部分为水谷之气，脾胃功能下降，不能产生足够的水谷之气，则宗气自然不足。
+
+更根本的原因可能是肾功能下降，肾藏精而生元气，元气不足，则脾胃、心肺功能皆下降，可导致宗气不足等病证。
 
 #### 1.4、脏腑之气
 
@@ -214,19 +186,25 @@
 
 #### 1.6、小结：
 
-营卫之气行于经络，由此可见，经络应为气态物质的运行通道，存在于各种组织器官的间隙之中。如内经说卫气“**循皮肤之中，分肉之间，熏于肓膜，散于胸腹**”，张景岳说“凡腔腹肉理之间，上下**空隙**之处，皆谓之肓”。
+经络为气态物质的运行通道，存在于各种组织器官的间隙之中。如内经说卫气“**循皮肤之中，分肉之间，熏于肓膜，散于胸腹**”，张景岳说“凡腔腹肉理之间，上下**空隙**之处，皆谓之肓”。
+
+特殊情况下，气态物质可以弥漫渗透的方式穿过形体组织。在《中医儿科学》的小儿哮喘病中，谈到此病的病根为肺中伏痰，但过食冷、酸、咸的食物会诱发，就是因为小儿器官娇嫩，冷酸等气态物质浸入肺腑而发病。
+
+> 小儿**肺脏娇嫩**，治节失司；脾气虚弱，运化无权；肾阳不振，失于蒸化，酿生痰湿内停，留伏肺俞，是为潜在内因；而气候变化，寒暖失常，感受六淫；饮食不当，或**过食生冷酸咸**；以及吸入花粉、绒毛、灰尘，接触油漆、煤气、刺激性气体；甚至啼哭呛乳，均乃诱发哮喘的外来因素。故本病虽发作于肺，而又与脾肾二脏有关。
+>
+> 《中医儿科学-哮喘》
 
 营卫二气互相配合，营气负责营养，卫气负责温煦与护卫。两者配合不协调，则发生营卫不和的疾病。例如《伤寒论》的太阳中风证，为太阳区域受风邪侵袭，造成卫强而营弱的情况，表现为头痛、发热、汗出、怕风，用桂枝汤调和营卫治疗。
 
-营卫之气来自水谷之气。水谷本为固液态，在脏腑元气的作用下成为津血，进而化为气态的营卫。这种固液态与气态的相互转化，体现了阴阳互根互用的原理，与自然界太阳照射海水，蒸汽升而为云的现象很相似。
+总体来讲：
 
-宗气由吸入的自然之气与营卫之气混合而成，因此高质量的呼吸有利于宗气的形成。
+宗气主要产生于上焦，能入经络与血脉，主要功能是主呼吸与推动血与营气的运行，失常则有呼吸及血脉淤堵问题。
 
-> 古有真人者，提挈天地，把握阴阳，**呼吸精气**，独立守神，肌肉若一，故能寿敝天地，无有终时，此其道生。
->
-> 《素问-上古天真论》
+营气主要来自中焦，能入经络与血脉，主要功能是营养脏腑与形体。
 
-总体来讲，宗气主要来自上焦，营气主要在中焦，卫气主要来自下焦。经络是气态物质的主要通道，特殊情况也可在经络之外运行。
+卫气主要来自下焦，能入经络，不能入血脉，主要功能是温煦与护卫，失常则有寒热问题。
+
+气态物质以经络为主要通道，特殊情况也可在经络之外运行。
 
 ## 2、人体地气
 
@@ -350,13 +328,15 @@
 
 ## 3、总结
 
-经络中的气态物质包括卫气、营气、宗气，也包括脏腑产生的脏腑之气。气态物质配合津、血等液态物质，共同营养形体。
-
 总的来说，人体的元气、气态物质、津血、形体 外应自然界的阳光、空气、水、土。在元气作用下，人体的固、液、气三类物质的形态相互转换；能量状态在时间维度上波动，在空间维度上各有差异，这种波动和差异又都在各自的平衡范围内，从而形成了人体的适宜内环境。这是根据“天人合一”的道理，通过观察大自然推导出的人体规律。
 
 > 六腑者，所以受**水谷**而行化物者也。水谷入胃，脾气消磨，渣滓下传，精微上奉，化为**雾气**，归之于肺，肺司气而主皮毛，将此**雾气，由脏而经，由经而络，由络而播宣皮腠，熏肤充身泽毛，是谓六经之气。雾气降洒，化而为水，津液精血**于是生焉。阴性亲内，自皮而络，自络而经，自经而归趋脏腑。
 >
 > 黄元御《素灵微蕴》
+
+## 4、探讨：
+
+人体中气的种类与运行规律，历来也是中医的理论难点。目前科技的发展还不能精确分析人体内的能量和气态物质的运转情况，所以只能根据《内经》、《伤寒》等经典的叙述以及临床实践进行推论。又因为古人用词简略，有时会产生歧义，所以一些理论细节不能保证完全正确，但大致方向问题不大。以后随着科技的发展，对人体的认识会更加深入，那时对中医经典的诠释可能会更加准确。
 
 
 
