--- a/ok/rm/rm03-0.5.0.0.0.md
+++ b/ok/rm/rm03-0.5.0.0.0.md
@@ -20,7 +20,7 @@
 
 ## 1、人体天气
 
-人体的天气指的是人体中的气态物质，以水蒸汽和气雾状营养物质的形态，存在于经络、腠理以及各种空腔器官、孔窍等处。从功能上主要分为以下几种：营气、卫气、宗气、脏腑之气
+人体的天气指的是人体中的气态物质，以空气、水蒸汽和气雾状营养物质的形态，存在于经络、腠理以及各种空腔器官、孔窍等处。从功能上主要分为以下几种：营气、卫气、宗气、脏腑之气
 
 #### 1.1、营气
 
@@ -336,7 +336,7 @@
 
 ## 4、探讨：
 
-人体中气的种类与运行规律，历来也是中医的理论难点。目前科技的发展还不能精确分析人体内的能量和气态物质的运转情况，所以只能根据《内经》、《伤寒》等经典的叙述以及临床实践进行推论。又因为古人用词简略，有时会产生歧义，所以一些理论细节不能保证完全正确，但大致方向问题不大。以后随着科技的发展，对人体的认识会更加深入，那时对中医经典的诠释可能会更加准确。
+人体中气的种类与运行规律，历来也是中医的理论难点。目前科技的发展还不能精确分析人体内的能量和气态物质的运转情况，所以只能根据《内经》、《伤寒》等经典的叙述以及临床实践进行推论。又因为古人用词简略，有时会产生歧义，所以一些理论细节不能保证完全正确，但大致方向问题不大。以后随着人类认知能力的增加，对人体的认识会更加深入，那时对中医经典的诠释可能会更加准确。
 
 
 
