--- a/ok/gmzy/gmzy012-1.md
+++ b/ok/gmzy/gmzy012-1.md
@@ -1,6 +1,6 @@
 # **如何学习光明中医教材？**
 
-光明中医的办学方法与一般中医药大学的教育方法有较大区别。如白永波副校长所说，光明中医不提倡那种老师上面讲，学生下面听的大课，认为这种形式学习效率底而成本高。光明中医提倡发挥学员的自主能动性，按照自学、质疑、总结的方式学习。光明中医给学员提供自学所需的辅助条件：包括教材、学习指导、答疑等，并且引导学员实践、拜师。
+光明中医的办学方法与一般中医药大学的教育方法有较大区别。如白永波副校长所说，光明中医不提倡那种老师上面讲，学生下面听的大课，认为这种形式学习效率低而成本高。光明中医提倡发挥学员的自主能动性，按照自学、质疑、总结的方式学习。光明中医给学员提供自学所需的辅助条件：包括教材、学习指导、答疑等，并且引导学员实践、拜师。
 
 这种方法对学员的自学能力要求较高。教材有28门课，1000多万字。这么多内容，不可能平均分配精力，必须做好学习规划，把有限的精力用在重点内容的学习上。
 
