--- a/ok/gmzy/gmzy012-1.md
+++ b/ok/gmzy/gmzy012-1.md
@@ -45,7 +45,7 @@
 在中医的学习实践过程中，遇到一些难点突破不过去，有老师指点就很容易突破，所以函大提倡早拜师学习。
 
 
-这五点要求全部达到并不容易，需要花费大量的时间精力。因此，如果没有坚定的信念和极大的毅力，是很难学成中医的。所以光明前辈说，学中医要有一套好的教材，还要有正确的学习方法，再加上毅力，三者缺一不可。
+这五点要求全部做到需要花费大量的时间精力。因此，如果没有坚定的信念和极大的毅力，是很难学成中医的。所以光明前辈说，学中医要有一套好的教材，还要有正确的学习方法，再加上毅力，三者缺一不可。
 
 ### 解决疑问：
 
@@ -61,7 +61,7 @@
 
 因为光明教材有1000多万字，知识量非常大，学习的时间长。如果组织老师全程辅导，所花费的成本太高，大多学习者是难以承担的。因此需要学习者先以自学为主，对中医知识掌握到入门程度后，再找老师进行实习、实践，这样老师指导起来就容易多了。
 
-为了让学员用最短的时间达到中医入门的程度，网校提取了主要的7门课程放在学习平台（https://zuoye.gmzyh.com）上，供报名学员使用。这7门课为《概论》、《本草》、《方剂》、《内经》、《伤寒》、《金匮》、《温病》。这些课程包含了四大经典及其学习基础。中医无论怎样变化，都是以经典为根本的。能否认真学完经典，是业余爱好者和专业人士的分水岭。对于真心想学好中医的学员，只要在学习平台上认真完成全部作业，医理就能确保过关。在光明中医的教学要求里，这些课程已经是最基础、最低的要求了，如果这些课程都不能认真学完，想成为合格的中医恐怕很难。
+为了让学员用最短的时间达到中医入门的程度，网校提取了主要的7门课程放在学习平台（https://zuoye.gmzyh.com）上，供报名学员使用。这7门课为《概论》、《本草》、《方剂》、《内经》、《伤寒》、《金匮》、《温病》。这些课程包含了四大经典及其学习基础。中医无论怎样变化，都是以经典为根本的。能否认真学完经典，是业余爱好者和专业人士的分水岭。对于真心想学好中医的学员，只要在学习平台上认真完成全部作业，医理就能确保过关。在光明中医的教学要求里，这些已经是最基础、最低的了，如果这些课程都不能认真学完，想成为合格的中医恐怕很难。
 
 在学习时间方面，如果学员每天能拿出2-3个小时学习的话，大约2个月可以学完一门课程。7门课程全部学完需要一年半到两年的时间。两年时间看似慢，实则快。因为一旦学完这些课程，就真正进入中医之门，以后水平会稳步提高。如果不尊重中医前辈的教育经验，自以为是、胡乱学习，很可能一辈子在中医门外徘徊。
 
