--- a/ok/rm/rm03-0.1.0.0.0.md
+++ b/ok/rm/rm03-0.1.0.0.0.md
@@ -186,9 +186,7 @@
 
 人体这个房间要维持相对恒定的温度，维持体温就需要热量，热量由气、血、津液带来，其中血和津液相当于上面例子中的水，气相当于水蒸汽和被加热后房间空气。气、血、津液的热量由元气给予，元气相当于上面例子中的炉火，是原动力。元气由精产生。精相当于上面例子中的液化气，是人体的能源。
 
-在中医常用术语里，粗略的讲，阴一般指阴液，包括血、津液，阳一般指元气。如果详细讲，则要具体情况具体分析，不同情况下，阴阳所指不同，比如有时阴也指阴精。
-
-为了表达方便，**元气、血、津液、气态物质简称气血**，气血充足表示人体有足够的要素来完成各种功能。
+在中医常用术语里，阴一般指固液态的物质，特别是津液、血这类液体，阳一般指元气能量。如果详细讲，则要具体情况具体分析，不同情况下，阴阳所指不同，比如有时阴也指阴精。
 
 在不特指的情况下，阴虚就是血、津液的量低于正常范围，对应暖气里的水量不足。水量不足而火量不变的话，容易烧干，也就是阴虚火旺。这种情况会有一系列表现可供判断，比如从舌像上看，舌色暗红呈紫色等等。更多诊断方法可参考教材《概论-诊断》内容。调理方法是加水补阴了。
 
@@ -196,9 +194,11 @@
 
 如果阴阳都不足，对应暖气的水和火的量都不足，则产生的热量不足以温暖房间。在人体上则会出现体温低，怕冷，舌体枯萎。调理办法就是阴阳双补。
 
-人体任何部位都涉及到能量与固、液、气三态的相互作用与转化，所以这是人体平衡的基本原理。
+人体任何部位都涉及到能量与固、液、气三态的相互作用与转化，所以这是中医理论中人体平衡的基本原理。
 
-进一步细化的话，需要参照天地自然章节的内容。所以我们先回顾一下自然界的平衡过程。
+几种要素中，气态物质与血比较特殊，是营养身体的直接因素。所以常用气血一词来代表全部要素，气血充足，通常标志精、神、元气、津液等其它要素也充足，反之若气血不足，则需详细查找原因，看哪个要素出问题导致了气血不足。
+
+以上是各要素配合的基本原理，若进一步细化的话，需要参照天地自然章节的内容。所以我们先回顾一下自然界的平衡过程。
 
 自然界以土壤、水、空气、阳光为四大平衡指标。其中以阳光的多少最为多变，阳光的多少形成三阴三阳。阳光能量传递给地气和天气，天气获得能量后，气温在一个范围内波动，形成六气风热暑湿燥寒。地气获得能量后，温度波动，形成五运木火土金水。天气地气升浮降沉，云升雨降，形成气交之地的自然界。
 
@@ -251,7 +251,7 @@
 
 形体也包括固液态物质和气态物质，也有自身的天地划分。固液态物质包括皮、肉、筋、骨、脉、髓、血、津液等等。气态物质则包括自然空气、血和水的蒸汽等等，这些气态物质用宗气、营气、卫气、脏腑之气等名词描述，详细见后面章节。
 
-在中医理论中，液态物质由气态物质统帅，即血、水等液态物质的运行由气态物质推动和维护，称为“气为血之帅”。所以形体健康以气的正常运行为主要因素。而慢性疾病往往是以气的失常为先导，逐渐波及液态的津液和血，再延伸至固态的形体组织。
+在中医理论中，液态物质由气态物质统帅，即血、水等液态物质的运行由气态物质推动和维护，称为“气为血之帅”。所以形体健康以气的正常运行为主要因素。慢性疾病往往是以气的失常为先导，逐渐波及液态的津液和血，再延伸至固态的形体组织。
 
 > “故治病以理气为先，而用药以通络为主。盖人之经络不通，则转输不捷，药不能尽其功。
 >
