--- a/ok/rm/rm03-0.1.0.0.0.md
+++ b/ok/rm/rm03-0.1.0.0.0.md
@@ -196,7 +196,7 @@
 
 人体任何部位都涉及到能量与固、液、气三态的相互作用与转化，所以这是中医理论中人体平衡的基本原理。
 
-几种要素中，气态物质与血比较特殊，是营养身体的直接因素。所以常用气血一词来代表全部要素，气血充足，通常标志精、神、元气、津液等其它要素也充足，反之若气血不足，则需详细查找原因，看哪个要素出问题导致了气血不足。
+几种要素中，气态物质与血比较特殊，是营养身体的直接因素。所以常用**气血一词来代表全部要素**，气血充足，通常标志精、神、元气、津液等其它要素也充足，反之若气血不足，则需详细查找原因，看哪个要素出问题导致了气血不足。
 
 以上是各要素配合的基本原理，若进一步细化的话，需要参照天地自然章节的内容。所以我们先回顾一下自然界的平衡过程。 
 
