--- a/ok/rm/rm05.md
+++ b/ok/rm/rm05.md
@@ -154,13 +154,17 @@
 >
 > 《中医药学概论-诊法》
 
+> **问曰：脉病欲知愈未愈者，何以别之？答曰：寸口、关上、尺中三处、大小、浮沉，迟数同等，虽有寒热不解者，此脉阴阳为和平，虽剧当愈。**
+>
+> 《伤寒论讲解-辨脉法》
+
 诊脉的时间，一般选择在清晨日出，未进饮食之时，此时气血在全身的分配最平均。夜晚气血偏于里，白天气血偏于表，饮食后气血偏于脾胃，不同情况下气血各有所偏。所以若在其它时间诊脉，当脉象有些异常的时候，需要判断是正常的气血变化还是异常的气血变化。
 
 > **诊法常以平旦（1），阴气未动，阳气未散(2)，饮食未进，经脉未盛，络脉调匀，气血未乱（3），故乃可诊有过之脉(4)。**
 >
 > 《素问•脉要精微论》
 
-一般来说，人在白天、夏天、运动劳作、外感邪气的时候，气血消耗总量大，偏聚集于外在形体，脉偏浮；夜晚、冬天、休息、五脏患病的时候，气血消耗总量小，偏聚集于内在脏腑，脉偏沉。
+人在白天、夏天、运动劳作、外感邪气的时候，气血消耗总量大，偏聚集于外在形体，脉偏浮；夜晚、冬天、休息、五脏患病的时候，气血消耗总量小，偏聚集于内在脏腑，脉偏沉。
 
 ##### 3.4、小结
 
