--- a/ok/rm/rm03-0.1.0.0.0.md
+++ b/ok/rm/rm03-0.1.0.0.0.md
@@ -68,7 +68,7 @@
 
 这里的属天指的是相对而言，气态物质的比例高一些或者作用强一些。属地则相反。这种方式定义的几种天地，相互之间都有类似自然界气交之地的交互形式，包括物质交互和能量交互等。比如脏腑之间，腑包括胃、大小肠、胆、膀胱等，都是空腔器官，属天，里面有较多气态物质；脏包括肝、心、脾、肺、肾，为实体器官，属地，相对而言气态物质比较少，固液态物质比较多。脏腑之间互为表里，有频繁的物质或能量的交互。
 
-一般我们谈气这个名词，如果不特殊说明，指的是气态物质，也就是天气。在中医中，气态物质的作用非常大，其范畴远远超出现代医学研究的范畴。气虚就是气态物质不足，会影响人的很多功能。
+**一般我们谈气这个名词，如果不特殊说明，指的是气态物质，也就是天气**。在中医中，气态物质的作用非常大，其范畴远远超出现代医学研究的范畴。气虚就是气态物质不足，会影响人的很多功能。
 
 > 黄帝曰：余闻天为阳，地为阴，日为阳，月为阴，其合之于人，奈何？岐伯曰：***腰以上为天*，腰以下为地**，
 >
@@ -184,19 +184,27 @@
 
 5、控制系统的控制能力要正常，在火量调节方面不能出现大的偏差。
 
-人体这个房间要维持相对恒定的温度，维持体温就需要热量，热量由气、血、津液带来，其中血和津液相当于上面例子中的水，气相当于水蒸汽和被加热后房间空气。气、血、津液的热量由元气给予，元气相当于上面例子中的炉火，是原动力。元气由精产生。精相当于上面例子中的液化气，是人体的能源。
+人体这个房间要维持相对恒定的温度，维持体温就需要热量，热量由气、血、津液带来，其中血和津液相当于上面例子中的水，气相当于水蒸汽和被加热后房间空气。气、血、津液的热量由元气给予，元气相当于上面例子中的炉火，是原动力。元气由精产生，精相当于上面例子中的液化气，是人体的能源。神则类似控制器，起到管理调节作用。
 
-在中医常用术语里，阴一般指固液态的物质，特别是津液、血这类液体，阳一般指元气能量。如果详细讲，则要具体情况具体分析，不同情况下，阴阳所指不同，比如有时阴也指阴精。
+在中医常用术语里，阴一般指固液气三态的**物质**，特别是津液、血这类液体，阳一般指元气**能量**。如果详细讲，则要具体情况具体分析，不同情况下，阴阳所指不同，比如有时阴也指阴精。
 
-在不特指的情况下，阴虚就是血、津液的量低于正常范围，对应暖气里的水量不足。水量不足而火量不变的话，容易烧干，也就是阴虚火旺。这种情况会有一系列表现可供判断，比如从舌像上看，舌色暗红呈紫色等等。更多诊断方法可参考教材《概论-诊断》内容。调理方法是加水补阴了。
+阴虚主要指血、津液的量低于正常范围，对应暖气里的水量不足。水量不足而火量不变的话，容易烧干，也就是阴虚火旺。这种情况会有一系列表现可供判断，比如从舌像上看，舌色暗红呈紫色等等。更多诊断方法可参考教材《概论-诊断》内容。调理方法是加水补阴了。
 
 阳虚就是元气的量低于正常范围，对应暖气例子里的炉火不足。火不足，则水烧不热，所以屋子寒凉。其表现有怕冷，舌色淡白等。调理方法是调大阀门，让火旺起来，就是补阳了。
 
-如果阴阳都不足，对应暖气的水和火的量都不足，则产生的热量不足以温暖房间。在人体上则会出现体温低，怕冷，舌体枯萎。调理办法就是阴阳双补。
+如果阴阳都不足，对应暖气的水和火的量都不足，则需阴阳双补。
+
+几种要素中，气与血是营养身体的直接因素。血是营养身体器官的特别重要的液态物质。气是推动人体各项功能的直接动力。这个道理就像蒸汽机，火作用于水而产生蒸汽，火虽然是原动力，但是最终起直接作用的是蒸汽。人体元气虽然是原动力，但是对组织器官起直接作用的还是气态物质。所以元气之阳与物质之阴适度配合产生足够的气血，进而形成适宜的体内环境。
+
+由此可知，气、血、阴、阳的不足是中医虚证的主要原因，其中气、血虚为轻，阴、阳虚为重，对应则有补气、补血、补阴、补阳的方剂。
+
+> 补益的方法很多，在临证应用时主要针对气、血、阴、阳之虚而为补气、补血、气血两补、补阴、补阳等法。
+>
+> 《方剂讲解-补益剂》
+
+因为气血比较有代表性，所以常用**“气血”一词来代表全部要素**。气血充足，通常标志精、神、元气、津液等其它要素也充足，反之若气血不足，则需详细查找原因，看哪个要素出问题导致了气血不足。
 
 人体任何部位都涉及到能量与固、液、气三态的相互作用与转化，所以这是中医理论中人体平衡的基本原理。
-
-几种要素中，气态物质与血比较特殊，是营养身体的直接因素。所以常用**气血一词来代表全部要素**，气血充足，通常标志精、神、元气、津液等其它要素也充足，反之若气血不足，则需详细查找原因，看哪个要素出问题导致了气血不足。
 
 以上是各要素配合的基本原理，若进一步细化的话，需要参照天地自然章节的内容。所以我们先回顾一下自然界的平衡过程。 
 
