--- a/ok/rm/rm07.md
+++ b/ok/rm/rm07.md
@@ -102,6 +102,12 @@
 
 长度：脉搏每个波动与按脉手指接触的长度应适中，若长度较长，像琴弦一样，称为弦脉，代表肝胆气瘀滞，气不通则痛，所以常有痛症。若长度较短，像豆子一样，称为动脉，代表气血不通或者气血逆乱。
 
+> 伤寒，**脉弦**细，头痛，发热者，属**少阳**⑴。
+>
+> 《伤寒论讲解-265条》
+
+
+
 这里弦脉是一个容易误解的脉，因其解释为像琴弦，容易被误解为有力。其实弦脉就是长度较长，与力度无关。
 
 > 春脉弦...其脉之来，**濡弱而长**，故曰弦
@@ -128,7 +134,7 @@
 >
 > 《伤寒论-辨脉法》
 
-这些指标排列组合可以形成非常多的组合脉象，有丰富的含义。比如脉数代表热，脉无力代表气虚，若两者兼有，数而无力，则代表气虚而热；若是数而有力则代表实热。其它各类组合，如浮大数、浮数、沉涩、细数等等各有其含义。组合脉象的数量远远超出后世所说的二十八脉。二十八脉只是常见病脉的总结，其中有些为组合脉，比如革脉为沉、弦、大、实的组合；濡脉为浮、细、虚的组合；芤脉为浮、大、虚的组合。
+这些指标排列组合可以形成非常多的组合脉象，有丰富的含义。比如脉数代表热，脉无力代表气虚，若两者兼有，数而无力，则代表气虚而热；若是数而有力则代表实热。其它各类组合，如浮大数、浮数、沉涩、细数等等各有其含义。组合脉象的数量远远超出后世所说的二十八脉。二十八脉只是常见病脉的总结，其中有些为组合脉，比如濡脉为浮、细、虚的组合，主有湿邪；芤脉为浮、大、虚的组合，主津血伤；革脉为芤脉浮、大、虚的基础上加弦的组合，主精血亏；。
 
 > 此言者，非有六脉俱动也，谓浮、沉、长、短、滑、涩也。浮者阳也，滑者阳也，长者阳也；沉者阴也，短者阴也，涩者阴也。所谓一阴一阳者，谓脉来沉而滑也，一阴二阳者，谓脉来沉滑而长也，一阴三阳者，谓脉来浮滑而长，时一沉也；所谓一阳一阴者，谓脉来浮而涩也；一阳二阴者，谓脉来长而沉涩也；一阳三阴者，谓脉来沉涩而短，时一浮也。各以其经所在，名病顺逆也。
 >
