--- a/ok/rm/rm07.md
+++ b/ok/rm/rm07.md
@@ -106,8 +106,6 @@
 >
 > 《伤寒论讲解-265条》
 
-
-
 这里弦脉是一个容易误解的脉，因其解释为像琴弦，容易被误解为有力。其实弦脉就是长度较长，与力度无关。
 
 > 春脉弦...其脉之来，**濡弱而长**，故曰弦
@@ -128,7 +126,7 @@
 
 高度：脉的高低是指轻按为高，又叫浮取，离皮肤近；重按为低，又叫沉取，离骨近；不轻不重在两者之间为中取；正常情况下，无论浮、中、沉，脉搏的感觉应相差不大，代表气血分配较均匀。如果轻按的脉搏比重按的时候明显，称为浮脉，代表气血聚于表层。若重按的脉搏更明显，称为沉脉，代表气血聚集于里层。
 
-以上力度、频率、高度、宽度、长度、流速代表了脉搏的几大维度指标，每个指标都有其正常范围，超过正常范围则为失衡，向上失衡为阳，向下失衡为阴。所以《桂本伤寒论-平脉法第二》说“**凡脉大、浮、数、动、滑，此名阳也；凡脉沉、涩、迟、弦、微，此名阴也**”，其中浮、沉是从高度辨阴阳，滑、涩从流速辨阴阳，数、迟从频率角度辨阴阳，动、弦从长度辨阴阳，大、微从宽度辨阴阳。
+以上力度、频率、高度、宽度、长度、流速代表了脉搏的几大维度指标，每个指标都有其正常范围，超过正常范围则为失衡，向上失衡为阳，向下失衡为阴。所以《桂本伤寒论-平脉法第二》说“**凡脉大、浮、数、动、滑，此名阳也；凡脉沉、涩、迟、弦、微，此名阴也**”，其中浮、沉是从高度辨阴阳，滑、涩从流速辨阴阳，数、迟从频率辨阴阳，动、弦从长度辨阴阳，大、微从宽度辨阴阳。
 
 > **问曰：脉有阴阳，何谓也？答曰：凡脉大浮数动滑，此名阳也；脉沉涩弱弦微，此名阴也。凡阴病见阳脉者生，阳病见阴脉者死。**
 >
