--- a/ok/rm/rm03-0.1.0.0.0.md
+++ b/ok/rm/rm03-0.1.0.0.0.md
@@ -194,7 +194,7 @@
 
 如果阴阳都不足，对应暖气的水和火的量都不足，则需阴阳双补。
 
-几种要素中，气与血是营养身体的直接因素。血是营养身体器官的特别重要的液态物质。气是推动人体各项功能的直接动力。这个道理就像蒸汽机，火作用于水而产生蒸汽，火虽然是原动力，但是最终起直接作用的是蒸汽。人体元气虽然是原动力，但是对组织器官起直接作用的还是气态物质。所以元气之阳与物质之阴适度配合产生足够的气血，进而形成适宜的体内环境。
+几种要素中，气与血是营养身体的直接因素。血是营养身体器官的特别重要的液态物质。气是推动人体各项功能的直接动力。这个道理就像蒸汽机，火作用于水而产生蒸汽，火虽然是原动力，但是最终起直接作用的是蒸汽。人体元气虽然是原动力，但是对组织器官起直接作用的还是气态物质。所以元气能量之阳与物质之阴适度配合产生足够的气血，进而形成适宜的体内环境。
 
 由此可知，气、血、阴、阳的不足是中医虚证的主要原因，其中气、血虚为轻，阴、阳虚为重，对应则有补气、补血、补阴、补阳的方剂。
 
