--- a/ok/rm/rm06.md
+++ b/ok/rm/rm06.md
@@ -42,7 +42,7 @@
 >
 > 《金匮要略讲解-中风历节》
 
-《伤寒论》是论述风寒之邪外袭经络之后的各种表现治法。根据其人本身的健康状态差异，邪气或传或不穿，或一日一传，或多日一传，或先作用于太阳经络后传于阳明经、少阳经，再传于三阴经络，或未经阳经直接作用于三阴经，或由经传入脏腑，等等情况，不一而足。邪气作用于不同部位，则有对应表现与治法。
+《伤寒论》是论述风寒之邪外袭经络之后的各种表现治法。根据其人本身的健康状态差异，邪气或传或不传，或一日一传，或多日一传，或先作用于太阳经络后传于阳明经、少阳经，再传于三阴经络，或未经阳经直接作用于三阴经，或由经传入脏腑，等等情况，不一而足。邪气作用于不同部位，则有对应表现与治法。
 
 > 所谓传变，则主要是对这一变化的描述，邪气由此经进入彼经，则谓之传。随着邪气的转移，临床证候也必然相应地发生变化,有传必有变，故称传变，也即传经。传与不传与邪气的盛衰，正气的强弱，治疗与护理之是否得当有关，尤以正气的抗邪能力大小为关键。若正气虚衰，邪气则可由表传里，由浅入深，使病证渐趋沉重；若正气恢复，抗邪有力,邪气又可由里达表，由阴出阳，使病向愈。辨传与不传，传至何经,当以脉证变与不变为据。
 >
