--- a/ok/rm/rm03-0.1.0.0.0.md
+++ b/ok/rm/rm03-0.1.0.0.0.md
@@ -202,7 +202,7 @@
 >
 > 《方剂讲解-补益剂》
 
-因为气血比较有代表性，所以常用**“气血”一词来代表全部要素**。气血充足，通常标志精、神、元气、津液等其它要素也充足，反之若气血不足，则需详细查找原因，看哪个要素出问题导致了气血不足。
+因为气血比较有代表性，所以常用**“气血”一词来代表全部要素**。气血充足也叫正气足，通常标志精、神、元气、津液等其它要素也充足，反之若气血不足，则需详细查找原因，看哪个要素出问题导致了气血不足。
 
 人体任何部位都涉及到能量与固、液、气三态的相互作用与转化，所以这是中医理论中人体平衡的基本原理。
 
