--- a/ok/rm/rm06.md
+++ b/ok/rm/rm06.md
@@ -8,27 +8,33 @@
 
 人体的部位划分主要有以下几种：
 
-#### 1.1、气血的生产与使用
+#### 1.1、脏腑与形体
 
 这种划分方法是按照资源的产生与使用来划分的。
 
-形体包括头、颈、胸、腹、背、腰、四肢手足、关节，是气血的使用者。
+形体是资源的使用者，从质地上分皮、脉、肉、筋、骨，位置包括头、颈项、胸、腹、背、腰、四肢手足、关节。
 
-脏腑包括：肝、心、脾、肺、肾、胆、小肠、胃、大肠、膀胱、三焦、心包，即是气血的产生者又是使用者。脏腑按照上下方位可以分为三焦：上焦主要包括心肺，中焦主要包括脾胃，下焦包括肾、膀胱、大小肠等。
+脏腑即是气血的产生者又是使用者，包括五脏六腑，五脏为肝、心、脾、肺、肾，六腑为胆、小肠、胃、大肠、膀胱、三焦。
 
-#### 1.2、阴阳比例的差异：
+脏腑按照上下方位可以分为三焦：上焦主要包括心肺，中焦主要包括脾胃，下焦包括肾、膀胱、大小肠等。
 
-前面谈到了根据人体元气与物质阴阳比例划分的三阴三阳，比如太阳区域包括足太阳膀胱腑、膀胱经、手太阳小肠腑、小肠经，其它五个区域类同，简称为六经辨证。这种划分方法是《伤寒论》采用的方法，对中医至关重要。
+#### 1.2、三阴三阳
 
-#### 1.3、正邪传导过程：
+按照元气与物质阴阳比例，可划分为三阴三阳区域。比如太阳区域包括足太阳膀胱腑、膀胱经、手太阳小肠腑、小肠经，其它五个区域类同。
 
-从正邪的传递过程角度划分，可以分为皮、脉、肉、筋、骨、经、络、脏、腑。
+依据三阴三阳进行疾病的区分，简称为六经辨证。这种划分方法是《伤寒论》采用的方法，对中医至关重要。
+
+#### 1.3、外邪侵入过程划分：
+
+从外邪的侵入角度划分，可以分为皮、脉、肉、筋、骨、经、络、脏、腑。
 
 ![img](img/%E4%BC%81%E4%B8%9A%E5%BE%AE%E4%BF%A1%E6%88%AA%E5%9B%BE_16225444722166.png)
 
 
 
-注意这里的经络也是一种部位，可以有寒热虚实的失衡。因经络是气的通道，所以变化很快。又因为经络外连皮肉筋骨、内通脏腑，所以涉及范围很广。再因为不同经络互相连接，所以可以互相传递。
+如上图所示，外邪先侵袭皮毛，然后或入络经脏腑，或入脉肉筋骨，依次发展。至于走哪条通路，最终到达哪个部位，主要取决于该部位的正邪力量对比。邪气能通过的部位，必然是该位置的正气不足，所谓“邪之所凑，其气必虚”。而正气充足的部位，邪气必然难以通过，即为“正气存内，邪不可干”。
+
+注意这里的经络也是一种部位，有寒热虚实的失衡。因经络是气的通道，所以变化很快。又因为经络外连皮肉筋骨、内通脏腑，所以涉及范围很广。再因为不同经络互相连接，所以可以互相传递。
 
 > 百病之始生也，必先于**皮毛**，邪中之则腠理开，开则入客于**络脉**，留而不去，传入于**经**，留而不去，传入于府，廪于**肠胃**（1）。邪之**始入于皮**也，沂然起毫毛，开腠理；其**入于络**也，则络脉盛色变（2）；其入**客于经**也，则感虚乃陷下（3）；其留于**筋骨**之间，寒多则筋挛骨痛，热多则筋弛骨消，肉烁腘破，毛直而败（4）。
 >
@@ -48,7 +54,7 @@
 >
 > 《伤寒论讲解-绪论》
 
-#### 1.4、人体与外界的边界
+#### 1.4、表里划分
 
 从人体与外界的关系角度，有表、里的划分方法。表指的是皮肤、肌肉及涉及到皮肤、肌肉的经络，里指的是除了表之外的部位，包括脏腑、筋骨等。
 
@@ -100,7 +106,7 @@
 
 #### 1.5、卫气营血
 
-卫气营血也可以理解为一种部位划分方法，在温热邪气侵袭人体的情况下，这种划分方法比较有利于区分病情的轻重。
+卫气营血也可以理解为一种部位划分方法，在**温热邪气**侵袭人体的情况下，这种划分方法比较有利于区分病情的轻重。
 
 卫分指的是肺与皮毛。气分指胸膈、肺、胃、大、小肠、肝、胆等部位。营分指血中的营气或者心包；血分指的是心、肝、肾等部位。卫气营血的病位定义稍显模糊，主要是根据所影响的功能和舌脉等特征判断。
 
@@ -112,29 +118,35 @@
 
 ## 2、疾病的轻重转化
 
-关于疾病的轻重转化值得大家重视，通过几大要素的具体分析，我们知道脏最重要、腑其次，而筋脉皮肉再次。但是这里有一个很现实的问题：很多时候腑病或者皮肉筋骨病的症状表现比脏病剧烈。比如发热这个症状，中医认为发热多为正邪对抗的表现。脏病之人正气不足，驱邪无力，往往发热不明显，而腑病反而会有高热的现象。所以当脏病向腑病转化的时候，病人会觉得更不舒服。这种情况是比较考验医生的定力和技术的，如果不懂原理，处理不当，会重新由腑病返回脏病，功亏一篑。
+疾病的轻重从部位分布角度看，越向外越轻，越向里越重，所以病在皮毛为最轻，在经络、筋骨次之，在脏腑为最重。
 
-特别值得一提的就是西医的消炎药。从中医角度看，某些消炎药是非常寒凉的药物，能普遍消灭体内实热，比较适合于身体强壮之人的体内有大范围实热的情况，虚热和局部实热都不适宜使用。比如局部实热，应该针对局部进行泻热的处理。如果大量使用消炎药，虽然这个局部的实热也能解决，但是其他部位的阳气也被大量消灭，容易变成全身普遍阳虚的失衡状态。五脏阳气虚后，疾病容易由皮肉筋脉腑病转为脏病，这时病人的症状看似减轻了，但是实际上已经造成了更大的问题。中医是通过四诊观察人体的外在表现得知这个情况。西医还没有发现这个道理,因为仪器设备还检测不了人体脏腑的阳气情况。但是西医通过大范围的调查，发现滥用抗生素会造成菌群失调，降低免疫力，造成各种副作用，其实这就是中医谈到的人体环境失调的结果。双方算是一定程度上的殊途同归。
+疾病的轻重对于某一个具体部位而言，主要观察该部位正邪力量的对比，即正虚与邪实的程度。这里正气包括气、血、阴、阳等，邪气包括六淫、瘀血、痰饮等。正虚邪实的程度越轻，疾病越轻，反之越重。
 
-现在很多难治的疾病，比如心脏病、肝病、肾病等等，都是因为没有明白这些道理。这类难治病一般都是五脏病，需要根据五脏的虚实失衡进行对应的补泻调节，使其恢复平衡。五脏恢复平衡后，则功能强健，会驱病邪向外，再根据病邪所到部位在腑还是在筋脉皮肉，性质是虚是实，对应调节，随证治之，直到病邪全部排出，排出形式可能是汗、吐、大小便等几种。
+以上两者结合，疾病最轻的情况是皮毛部位有轻微的正虚邪实，最重的情况是五脏部位有严重的正虚邪实。
+
+而疾病的转化规律就是：部位上由外入里，程度上正气减少、邪气增加为疾病加重；反之部位上由里向外，程度上正气增加、邪气减少为疾病减轻。
+
+中医治病的总体规律就是：对内在部位严重的正虚邪实情况，以扶正祛邪的方法，恢复正气，减少邪气，使失衡部位由内向外转化，失衡程度由重向轻转化。也即常说的“阴证转阳证”，直至治愈。
 
 > 凡由阴证转化为阳证，或由阳证转化为阴证的，即是疾病性质的根本转变。这种转变，常常取决于邪正双方力量的对比。凡正气充足的，大多由阴转阳，疾病向轻浅转化，正气虚衰的，大多由阳转阴，疾病向重深发展。例如：《伤寒论》太阳篇：“病发热头痛，脉反沉，若不差，身体疼痛，当救其里，宜四逆汤。”(92条)《伤寒论》阳明篇：“脉浮而迟，表热里寒，下利清谷者，四逆汤主之。”(225条)这是阳气衰微，正气不足，或治疗失当，重伤其阳，致使阳经之病，从阴化、寒化，转为阴证的证候。
 >
 > 《黄帝内经讲解-阴阳互根互用的关系》
 
-所以中医更强调疾病的动态变化，随时根据变化调整方药治法。所谓“用药如用兵”，道理就是如此。有人总想废弃中医理论，找到一种固定的方药来彻底解决心脏病、肝病、肾病等五脏病。这个想法是很难实现的。除非出现传说中的仙丹妙药，能够大幅度提升人体的精气神等正气，使正气强大到轻松排除各种病邪，使人恢复到年轻时的健康状态。这几乎是不可能的事情！
+因不同部位各有其功能，各种部位失衡导致的相关功能异常会有独特的外在表现，所以我们可以通过外在表现来判断疾病的部位及程度，并指导治疗的方向。
 
-> “*观其脉证*，知犯何逆，随证治之”，意为诊察病人现有的脉象和证候，了解以往在治疗上发生过什么错误，然后根椐具体情况进行论治。这不仅是治疗坏病的原则，也是辨证论治精神的具体体现。
+> “观其脉证，知犯何逆，随证治之”，意为诊察病人现有的脉象和证候，了解以往在治疗上发生过什么错误，然后根椐具体情况进行论治。这不仅是治疗坏病的原则，也是辨证论治精神的具体体现。
 >
 > 《伤寒论讲解-辨太阳病脉证并治上第五》
 
-> 黄帝曰：外内之病，难易之治奈何？伯高答曰：形先病而未入脏者，刺之半其日。脏先病而形乃应者，刺之倍其日。此月内难易之应也。
->
-> 《灵枢-寿夭刚柔第六》
+要注意的是，有时重证的外在表现反而不如轻证的表现剧烈。比如发热这个症状，中医认为发热多为正邪对抗的表现。脏病之人正气不足，驱邪无力，往往发热不明显，而腑病反而会有高热的现象。所以当脏病向腑病转化的时候，虽为阴证转阳证的好事，但病人自我感觉可能会更不舒服。这种情况即考验医生的技术水平，也考验病人的信任程度，如果不懂原理，处理不当，会重新由腑病返回脏病，功亏一篑。
 
-#### 中西医标准的一些差异
+现在很多难治的五脏病，皆为此道理。需要根据五脏的虚实失衡进行对应的补泻调节，使其恢复平衡。五脏恢复平衡后，则功能强健，会驱病邪向外，再根据病邪所到部位在腑还是在筋脉皮肉，性质是虚是实，对应调节，随证治之，直到病邪全部排出，排出形式可能是汗、吐、大小便等几种。
 
-西医多使用验血的方法了解疾病的轻重。血液指标确实可以在一定程度上代表疾病的轻重。但是在某种情况下又并非如此。比如肝肾疾病，中医调理的初期可能有血液指标升高的情况。这是因为血液作为一种载体，承担着运载肝肾废物排出的功能。肝肾功能好转过程中，会排出更多废物到血液中。此时化验血液，就会出现指标升高的现象。这种情况要等到肝肾功能完全好转，废物全部排出，血液指标才会恢复到正常值。
+所以中医更强调疾病的动态变化，随时根据变化调整方药治法。在病情复杂情况下，如不详细辩证，只靠病名即开出方药，可能偶尔有效，但更多的是无效甚至产生其它变化。“用药如用兵”，即为此意。
+
+#### 附：中西医标准的一些差异
+
+西医多使用验血的方法了解疾病的轻重。血液指标确实可以在一定程度上代表疾病的轻重。但是在某种情况下又并非如此。比如肝肾疾病，中医调理的初期可能有某些血液指标升高的情况。这是因为血液作为一种载体，承担着运载肝肾废物排出的功能。肝肾功能好转过程中，会排出更多废物到血液中。此时化验血液，就会出现指标升高的现象。这种情况要等到肝肾功能完全好转，废物全部排出，血液指标才会恢复到正常值。
 
 那么如果出现血液指标升高，如何判断疾病是减轻还是加重呢？中医是通过人的面色、舌像、脉像、饮食、睡眠、精神、体力等方面来判断，也即是常说的望闻问切四诊。常有病人同时选择中西医治疗，当遇到两者指标冲突的时候，若不理解中医的道理，可能就放弃了中医的治疗。
 
