--- a/ok/rm/rm06.md
+++ b/ok/rm/rm06.md
@@ -138,7 +138,7 @@
 >
 > 《伤寒论讲解-辨太阳病脉证并治上第五》
 
-要注意的是，有时重证的外在表现反而不如轻证的表现剧烈。比如发热这个症状，中医认为发热多为正邪对抗的表现。脏病之人正气不足，驱邪无力，往往发热不明显，而腑病反而会有高热的现象。所以当脏病向腑病转化的时候，虽为阴证转阳证的好事，但病人自我感觉可能会更不舒服。这种情况即考验医生的技术水平，也考验病人的信任程度，如果不懂原理，处理不当，会重新由腑病返回脏病，功亏一篑。
+要注意的是，有时重证的外在表现反而不如轻证的表现剧烈。比如发热这个症状，中医认为发热多为正邪对抗的表现。脏病之人正气不足，驱邪无力，往往发热不明显，而腑病反而会有高热的现象。所以当脏病向腑病转化或者里证向表证转化的时候，虽为阴证转阳证的好事，但病人自我感觉可能会更不舒服。这种情况即考验医生的技术水平，也考验病人的信任程度，如果不懂原理，处理不当，会重新由阳证返回阴证，功亏一篑。
 
 现在很多难治的五脏病，皆为此道理。需要根据五脏的虚实失衡进行对应的补泻调节，使其恢复平衡。五脏恢复平衡后，则功能强健，会驱病邪向外，再根据病邪所到部位在腑还是在筋脉皮肉，性质是虚是实，对应调节，随证治之，直到病邪全部排出，排出形式可能是汗、吐、大小便等几种。
 
