--- a/ok/bc/bc05-0.0.14.0.0.md
+++ b/ok/bc/bc05-0.0.14.0.0.md
@@ -1,6 +1,6 @@
 ### 萆薢
 
-〔原文〕**甘苦性平。入足阳明、厥阴。**胃、肝。**祛风去湿，以固下焦，**阳明主肉，属湿；厥阴主筋，属风。**补肝虚，**去风。**坚筋骨，**风湿去，则筋骨坚。**益精明目。治风寒湿痹，腰痛久冷，关节老血，膀胱宿水，阴痿失溺，茎痛遗浊，痔瘘恶疮。**诸病皆阳明湿热流入下焦，萆薢能除浊分清，古方有萆薢分清饮。史国信曰：若欲兴阳，先滋筋力；若欲便清，先分肝火。《万金护命方》曰：凡人小便频数，便时痛不可忍者，此疾必因大肠秘热不通，水液只就小肠，大肠愈加午竭，甚则身热心燥，思水，即重证也。此疾本因贪酒色，或过食辛热荤腻之物，积有热毒腐物瘀血，乘虚流入小肠，故便时作痛也。此便数而痛，与淋证涩而痛不同，宜用萆薢一两，盐水炒，为末，每服二三钱，使水道转入大肠，仍以葱汤频洗谷道，令气得通，则便数及痛自减也。肾有二窍，淋证出于溺窍，浊证出于精窍。**有黄白二种，黄长鞕**音硬，**白虚软，软者良。薏苡为使，畏大黄、柴胡、前胡，忌茗、醋。**时珍曰：萆薢、菝葜、土茯苓，形不同而主治不甚相远，岂一类数种乎？萆薢根细长浅白，菝葜根作块而黄。
+〔原文〕**甘苦性平。入足阳明、厥阴。**胃、肝。**祛风去湿，以固下焦，**阳明主肉，属湿；厥阴主筋，属风。**补肝虚，**去风。**坚筋骨，**风湿去，则筋骨坚。**益精明目。治风寒湿痹，腰痛久冷，关节老血，膀胱宿水，阴痿失溺，茎痛遗浊，痔瘘恶疮。**诸病皆阳明湿热流入下焦，萆薢能除浊分清，古方有萆薢分清饮。史国信曰：若欲兴阳，先滋筋力；若欲便清，先分肝火。《万金护命方》曰：凡人小便频数，便时痛不可忍者，此疾必因大肠秘热不通，水液只就小肠，大肠愈加干竭，甚则身热心燥，思水，即重证也。此疾本因贪酒色，或过食辛热荤腻之物，积有热毒腐物瘀血，乘虚流入小肠，故便时作痛也。此便数而痛，与淋证涩而痛不同，宜用萆薢一两，盐水炒，为末，每服二三钱，使水道转入大肠，仍以葱汤频洗谷道，令气得通，则便数及痛自减也。肾有二窍，淋证出于溺窍，浊证出于精窍。**有黄白二种，黄长鞕**音硬，**白虚软，软者良。薏苡为使，畏大黄、柴胡、前胡，忌茗、醋。**时珍曰：萆薢、菝葜、土茯苓，形不同而主治不甚相远，岂一类数种乎？萆薢根细长浅白，菝葜根作块而黄。
 
 【讲解】**萆薢长于利湿浊，祛风湿。**为薯蓣科多年生蔓生草本植物粉背薯蓣，或山萆薢、艾蕊薯蓣、纤细薯蓣等的干燥根茎。粉背薯蓣或山萆薢等的干燥根茎名“粉萆薢”，外皮棕黑色，断面黄白色，质柔软。切片，生用。
 
