--- a/ok/rm/rm02.md
+++ b/ok/rm/rm02.md
@@ -418,13 +418,13 @@
 
 气交之处的能量就是由六气和五运共同作用来决定的。用现代的语言就是对流层的温度由大气吸收的太阳短波辐射和地面发射的长波辐射共同起作用。这些属于现代地理和物理的基本知识，不了解的可以查找一下相关资料。所以，自然界的气候与热辐射关系紧密，涉及到不同波长的能量波。从天人合一的理念看，人体也应该有这类道理。近些年，有中医从人体热像和波长、频率的角度研究中医诊断和治疗方法，是有其理论基础的。
 
-##### 天气、地气的能量失衡
+##### 天气、地气的动态平衡与失衡
 
-一年的天气按照六气划分，地气按照五运划分。在对应的时间段应该有对应的天气和地气，如果在某个时间段没有出现对应的天气、地气就是失衡。
+一年的天气按照六气划分，地气按照五运划分。天气与地气共同形成适宜的气候。自然界的生物已经适应在各个时间段有不同的气候，所以有相应的生命活动与之对应。春天温暖，种子发芽；夏天炎热，植物长大；秋天凉爽，植物结果；冬天寒冷，植物凋谢。
 
-自然界的生物已经适应在各个时间段有不同的气候，所以有相应的生命活动与之对应。比如，春天的时候，种子发芽，夏天的时候长大，秋天的时候结果，冬天凋谢。中医用生、长、化、收、藏来概括这个过程。
+假设春天以气温10度为平衡点，夏天以30度，秋天以10度，冬天以-10度为平衡点，可以看出平衡点是随着时间动态变化的。气温30度如果是出现在夏天就是正常的、平衡的，如果出现在春天或者冬天，就是异常的、失衡的。这种平衡点随时间变化的情况就是中医所说的动态平衡。因这种动态平衡是太阳阳气与地球阴气互相消长进退而形成的，所以又叫阴阳消长动态平衡。
 
-因此，自然界生物的正常生长，需要天地之气按照正常的规律运转。如果在某个时间段没有出现对应的气候，比如春天该温暖而没有温暖，这就是非时之气。非时之气会造成自然界的生物生病，也会让人体生病。
+因此，自然界生物的正常生长，需要天地之气按照正常的规律运转。如果在某个时间段没有出现对应的气候，比如春天该温暖而没有温暖，甚至出现倒春寒，这就是非时之气。非时之气会造成自然界的生物生病，也容易让人体生病。
 
 > **帝曰：至而不至，未至而至，何如？岐伯曰：应则顺，否则逆，逆则变生，变生则病**...
 >
@@ -450,19 +450,17 @@
 
 ##### 地气五行的特殊性
 
-大地温度的变化对动植物生命的成长过程有重要作用。在平衡范围内，温度偏高的时候，生命活动活跃；温度偏低的时候，生命活动低沉。因此，地气五行与生命的生、长、化、收、藏的过程相对应，比如地气处于木气阶段的时候，土壤开始温暖，种子开始发芽，所以木气主生。其它类似，火气主长、土气主化、金气主收、水气主藏。
+地气的变化对动植物生命的成长过程有重要作用。在平衡范围内，温度偏高的时候，生命活动活跃；温度偏低的时候，生命活动低沉。因此，地气五行与生命的生、长、化、收、藏的过程相对应，比如地气处于木气阶段的时候，土壤开始温暖，种子开始发芽，所以木气主生。其它类似，火气主长、土气主化、金气主收、水气主藏。
 
 > 木火土金水，地之阴阳也，生长化收藏下应之
 >
 > 《素问•天元纪大论》
 
-五行在维持生命的过程中，需要保持相互之间的平衡。五行生克就是来源与此，五行的生克乘侮的内容在教材以及各种中医资料中叙述的比较多。大家可以参考光明教材《概论》和《内经》的五行学说部分，此处不细说。
+五行在维持生命的过程中，需要保持相互之间的平衡。五行生克就是来源与此，五行的生克乘侮内容在教材中叙述的比较好。大家可以参考光明教材《概论》和《内经》的五行学说部分，此处不细说。
 
 > **夫五运之政，犹权衡也(1)，高者抑之，下者举之，化之应之，变者复之，此生长化成收藏之理，气之常**也，失常则天地四塞矣(2)。
 >
 > 《素问•气交变大论》
-
-因为五行对生命的重要性，所以内经中有很大篇幅是介绍脏腑五行与身体各个部分的关系。教材《概论》中把五行学说直接放在阴阳学说之后，作为第一章的主要内容进行介绍。
 
 ###### 五行与五方
 
