--- a/ok/rm/rm03-0.5.0.0.0.md
+++ b/ok/rm/rm03-0.5.0.0.0.md
@@ -188,6 +188,10 @@
 
 经络为气态物质的运行通道，存在于各种组织器官的间隙之中。如内经说卫气“**循皮肤之中，分肉之间，熏于肓膜，散于胸腹**”，张景岳说“凡腔腹肉理之间，上下**空隙**之处，皆谓之肓”。
 
+> 岐伯答曰：气之不得无行也，如水之流，如日月之行不休，故阴脉荣其脏，阳脉荣其腑，如环之无端，莫知其纪，终而复始，其流溢之气，内溉脏腑，外濡腠理。
+>
+> 《灵枢-天年》
+
 特殊情况下，气态物质可以弥漫渗透的方式穿过形体组织。在《中医儿科学》的小儿哮喘病中，谈到此病的病根为肺中伏痰，但过食冷、酸、咸的食物会诱发，就是因为小儿器官娇嫩，冷酸等气态物质浸入肺腑而发病。
 
 > 小儿**肺脏娇嫩**，治节失司；脾气虚弱，运化无权；肾阳不振，失于蒸化，酿生痰湿内停，留伏肺俞，是为潜在内因；而气候变化，寒暖失常，感受六淫；饮食不当，或**过食生冷酸咸**；以及吸入花粉、绒毛、灰尘，接触油漆、煤气、刺激性气体；甚至啼哭呛乳，均乃诱发哮喘的外来因素。故本病虽发作于肺，而又与脾肾二脏有关。
@@ -262,9 +266,9 @@
 
 #### 2.3、脏腑之气
 
-脏腑之气是脏腑所对应的气态物质。元气通过三焦作用于各个脏腑。各个脏腑获得能量后，又可以产生脏腑之气。这个气类似前面天地章节提到的，地气对气交之地的天气产生的影响。
+脏腑之气是脏腑所对应的气态物质。元气通过三焦作用于各个脏腑。各个脏腑获得能量后，又可以产生脏腑之气。所以脏腑能量越强，脏腑之气越充足。脏腑及其对应的气态物质可参考前面天地章节，五方地气对气交之地的天气产生的影响。
 
-人体的五行脏气分布是肝气左升、肺气右降，心气浮于上，肾气沉于下，脾在中间。这种分布对均衡人体上下部气血有重要作用，若出现问题，可以导致气机升降的问题，出现上实下虚或者下实上虚等分布不均的问题。
+人体的五行脏气分布是肝气左升、肺气右降，心气浮于上，肾气沉于下，脾气在中间灌溉四旁。这种分布对均衡人体上下部气血有重要作用，若出现问题，可以导致气机升降的问题，出现上实下虚或者下实上虚等分布不均的问题。
 
 > 《素问•阴阳应象大论》说：“左右者，阴阳之道路也。”左右是阴阳升降的道路，左升右降。肝主春，其气从左而升，左为肝气分布的部位。故肝病多见于左。肺主秋，其气从右而降，右为肺气分布的部位，故肺病每见于右。如《难经•五十六难》说：“肝之积名曰肥气，在左胁下……肺之积名曰息贲，在右胁下。”所以临证积见于左者，多治肝血；生于右者，多治肺气。
 >
