--- a/ok/fjx/fjx01-0.3.0.0.0.md
+++ b/ok/fjx/fjx01-0.3.0.0.0.md
@@ -2,7 +2,7 @@
 
 〔组成〕麻黄去节三两（10克）  芍药三两（10克）  细辛三两（3克）  干姜三两（10克）  甘草炙三两（6克）  桂枝三两（10克） 五味子半升（6克）  半夏洗半升（10克）
 
-〔煎服法3〕原方八味，以水一斗，先煮麻黄，减二升，去上沫，纳诸药，煮取三升，去渣，温服一升。
+〔煎服法〕原方八味，以水一斗，先煮麻黄，减二升，去上沫，纳诸药，煮取三升，去渣，温服一升。
 
 〔讲解〕本方为治表寒里饮表里双解的主要方剂。对风寒客表，水饮内停以及痰饮喘咳无表证；身体重痛，肌肤悉肿者均可应用。因风寒袭表，阳气被遏，故见恶寒发热，无汗，身体疼痛；饮为阴邪，示寒射肺，肺失宣降，故咳喘痰多。水停心下，阻滞气机，故胸痞，水留胃中，胃气上逆故干呕。水饮溢于肌肤，故浮肿身重。外有表邪，故脉浮。本方用麻黄为君，发汗平喘，宣肺行水，以桂枝为臣，辛温解肌，既助麻黄以解表，又能温阳化气，助麻黄以行水涤饮。又用干姜温睥肺之寒，以杜其生痰之源。细辛、五味子一散一收相互制约，以达止咳平喘之效。以上三味相须为用，是为散中有收，使风寒与水饮全除而肺气不伤。更用半夏祛痰蠲饮降逆止呕。芍药敛阴和营与桂枝为伍，可调和营卫，并可防止麻、桂汗散太过以为佐。炙甘草协和诸药以为使，合芍药酸甘化阴更能缓急迫以治咳喘，全方共呈涤饮解表、止咳平喘之效。
 
